@@ -114,11 +114,11 @@ public class ServerLocationManager  {
 	    loader.addURL(f);
 	    
 	    //for AS 8.1: no more endorsed dir!!!
-//////	    f = new File(installRoot+"/lib/xercesImpl.jar");
-//////	    loader.addURL(f);
-//////	    f = new File(installRoot+"/lib/dom.jar");
-//////	    loader.addURL(f);
-//////	    f = new File(installRoot+"/lib/xalan.jar");
+//	    f = new File(installRoot+"/lib/xercesImpl.jar");
+//	    loader.addURL(f);
+//	    f = new File(installRoot+"/lib/dom.jar");
+//	    loader.addURL(f);
+//	    f = new File(installRoot+"/lib/xalan.jar");
 	//    loader.addURL(f);
 	    //for AS 8.1:
 	    f = new File(installRoot+"/lib/jaxrpc-api.jar");//NOI18N
@@ -141,7 +141,7 @@ public class ServerLocationManager  {
      * may return null if no platform is available...
      **/
     
-    static public File getLatestPlatformLocation(){
+    public static File getLatestPlatformLocation(){
         Iterator i = serverLocationAndClassLoaderMap.entrySet().iterator();
         File ret =null;
         while (i.hasNext()){
@@ -180,7 +180,7 @@ public class ServerLocationManager  {
         	return data.serverOnlyClassLoader;
 
     }
-    public synchronized static DeploymentFactory getDeploymentFactory(File platformLocation) {
+    public static synchronized DeploymentFactory getDeploymentFactory(File platformLocation) {
 	CacheData data =(CacheData) serverLocationAndClassLoaderMap.get(platformLocation.getAbsolutePath());
 	if (data==null){// try to initialize it
 	    getNetBeansAndServerClassLoader(platformLocation);
@@ -193,7 +193,7 @@ public class ServerLocationManager  {
     
     }
     
-    public synchronized static ClassLoader getNetBeansAndServerClassLoader(File platformLocation) {
+    public static synchronized ClassLoader getNetBeansAndServerClassLoader(File platformLocation) {
 	CacheData data =(CacheData) serverLocationAndClassLoaderMap.get(platformLocation.getAbsolutePath());
 	if (data==null){
 	    if (!isGoodAppServerLocation(platformLocation)){
@@ -210,7 +210,7 @@ public class ServerLocationManager  {
 	    try {
 		data.cachedClassLoader =new ExtendedClassLoader( new Empty().getClass().getClassLoader());
 		updatePluginLoader( platformLocation, data.cachedClassLoader);
-		data.deploymentFactory =  (DeploymentFactory) data.cachedClassLoader.loadClass("com.sun.enterprise.deployapi.SunDeploymentFactory").newInstance();//NOI18N
+		data.deploymentFactory =  (DeploymentFactory) data.cachedClassLoader.loadClass("com.sun.enterprise.deployapi.SunDeploymentFactory").getDeclaredConstructor().newInstance();//NOI18N
                 data.serverOnlyClassLoader = new ExtendedClassLoader();
                 updatePluginLoader(platformLocation, data.serverOnlyClassLoader);
 	    } catch (Exception ex2) {
@@ -263,8 +263,8 @@ public class ServerLocationManager  {
 	}
 	
 	//one extra test to detect 8.0 versus 8.1: dom.jar has to be in lib not endorsed anymore:
-////	File f = new File(candidate.getAbsolutePath()+"/lib/dom.jar");
-////	return f.exists();
+//	File f = new File(candidate.getAbsolutePath()+"/lib/dom.jar");
+//	return f.exists();
         return true;
 	
     }
