@@ -99,7 +99,7 @@ public class JvmOptions extends ModuleMBean implements Constants{
                     jpdaAttr = new Attribute(JPDA_PORT, value);
                 }
             }else{ 
-                Integer value = new Integer(addrValue);
+                Integer value = Integer.valueOf(addrValue);
                 jpdaAttr = new Attribute(JPDA_PORT, (Object)value);
             }    
             attList = this.conn.getAttributes(this.configObjName, attributes);
@@ -196,7 +196,7 @@ public class JvmOptions extends ModuleMBean implements Constants{
             String inMiddle = debugOptionsVal.substring(debugOptionsVal.indexOf(DEBUG_OPTIONS_ADDRESS) + DEBUG_OPTIONS_ADDRESS.length(), debugOptionsVal.length());
             int hasMore = inMiddle.indexOf(","); //NOI18N
             if(hasMore != -1){
-                String debugOptionsEnd = inMiddle.substring(hasMore, inMiddle.length());
+                String debugOptionsEnd = inMiddle.substring(hasMore);
                 debugOptionsStart = debugOptionsStart + debugOptionsEnd;
             }
             Attribute newAttr = new Attribute(DEBUG_OPTIONS, debugOptionsStart);
@@ -243,7 +243,7 @@ public class JvmOptions extends ModuleMBean implements Constants{
             String addrValue = getAddressValue();
             Integer value = null;
             try{
-                value = new Integer(addrValue);
+                value = Integer.valueOf(addrValue);
             }catch(Exception ex){
                 if(this.isServerEightOne){
                     value = 9009;
