@@ -34,13 +34,21 @@ import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import org.netbeans.modules.gradle.api.execute.GradleCommandLine;
+import org.netbeans.modules.gradle.api.execute.RunUtils;
 import org.netbeans.spi.project.ProjectServiceProvider;
 import org.openide.filesystems.FileObject;
 import org.openide.filesystems.FileUtil;
+import org.openide.windows.IOColors;
+import static org.openide.windows.IOColors.OutputType.LOG_DEBUG;
+import static org.openide.windows.IOColors.OutputType.LOG_FAILURE;
+import static org.openide.windows.IOColors.OutputType.LOG_SUCCESS;
+import static org.openide.windows.IOColors.OutputType.LOG_WARNING;
 
 /**
  *
@@ -49,47 +57,20 @@ import org.openide.filesystems.FileUtil;
 @ProjectServiceProvider(service = OutputProcessorFactory.class, projectType = NbGradleProject.GRADLE_PROJECT_TYPE)
 public class GradleProcessorFactory implements OutputProcessorFactory {
 
-    private static final OutputProcessor URL_PROCESSOR = new URLOutputProcessor();
-    private static final OutputProcessor GRADLE_PROCESSOR = new GradleOutputProcessor();
-    private static final OutputProcessor JAVAC_PROCESSOR = new JavaCompilerProcessor();
-    private static final OutputProcessor GROOVYC_PROCESSOR = new GroovyCompilerProcessor();
-
-
     @Override
     public Set<? extends OutputProcessor> createOutputProcessors(RunConfig cfg) {
-        return new HashSet<>(Arrays.asList(URL_PROCESSOR, GRADLE_PROCESSOR, JAVAC_PROCESSOR, GROOVYC_PROCESSOR));
+        return Set.of(
+                GRADLE_PROCESSOR,
+                JAVAC_PROCESSOR,
+                GROOVYC_PROCESSOR,
+                new WarningModeAllProcessor(cfg)
+        );
     }
 
-    static final class URLOutputProcessor implements OutputProcessor {
+    private static final Pattern GRADLE_ERROR = Pattern.compile("(Build file|Script) '(.*)\\.gradle' line: ([0-9]+)");
 
-        private static final Pattern URL_PATTERN = Pattern.compile("(((https?|ftp|file)://|file:/)[-a-zA-Z0-9+&@#/%?=~_|!:,.;]*[-a-zA-Z0-9+&@#/%=~_|])");
+    public static final OutputProcessor GRADLE_PROCESSOR = new OutputProcessor() {
 
-        @Override
-        public boolean processLine(OutputDisplayer out, String line) {
-            Matcher m = URL_PATTERN.matcher(line);
-            int last = 0;
-            while (m.find()) {
-                String txt = line.substring(last, m.start());
-                String lnk = line.substring(m.start(), m.end());
-                last = m.end();
-                out.print(txt);
-                try {
-                    out.print(lnk, OutputListeners.openURL(new URL(lnk)));
-                } catch(MalformedURLException ex) {
-                    out.print(lnk);
-                }
-            }
-            if (last > 0) {
-                out.print(line.substring(last));
-            }
-            return last > 0;
-        }
-
-    }
-
-    static class GradleOutputProcessor implements OutputProcessor {
-
-        private static final Pattern GRADLE_ERROR = Pattern.compile("(Build file|Script) '(.*)\\.gradle' line: ([0-9]+)");
 
         @Override
         public boolean processLine(OutputDisplayer out, String line) {
@@ -110,11 +91,11 @@ public class GradleProcessorFactory implements OutputProcessorFactory {
             }
             return false;
         }
-    }
+    };
 
-    static class JavaCompilerProcessor implements OutputProcessor {
+    private static final Pattern JAVA_ERROR = Pattern.compile("(.*)\\.java\\:([0-9]+)\\: (error|warning)\\:(.*)");
 
-        private static final Pattern JAVA_ERROR = Pattern.compile("(.*)\\.java\\:([0-9]+)\\: (error|warning)\\:(.*)");
+    public static final OutputProcessor JAVAC_PROCESSOR = new OutputProcessor() {
 
         @Override
         public boolean processLine(OutputDisplayer out, String line) {
@@ -138,13 +119,12 @@ public class GradleProcessorFactory implements OutputProcessorFactory {
             }
             return false;
         }
+    };
 
-    }
+    private static final Pattern GROOVY_ERROR = Pattern.compile("(.*)\\.groovy\\: ([0-9]+)\\: (.+)");
+    private static final Pattern COLUMN_INFO = Pattern.compile(" @ line ([0-9]+), column ([0-9]+)\\.$");
 
-    static class GroovyCompilerProcessor implements OutputProcessor {
-
-        private static final Pattern GROOVY_ERROR = Pattern.compile("(.*)\\.groovy\\: ([0-9]+)\\: (.+)");
-        private static final Pattern COLUMN_INFO = Pattern.compile(" @ line ([0-9]+), column ([0-9]+)\\.$");
+    public static final OutputProcessor GROOVYC_PROCESSOR = new OutputProcessor() {
 
         @Override
         public boolean processLine(OutputDisplayer out, String line) {
@@ -177,6 +157,109 @@ public class GradleProcessorFactory implements OutputProcessorFactory {
             return false;
         }
 
-    }
+    };
 
+    private static final Pattern URL_PATTERN = Pattern.compile("(((https?|ftp|file)://|file:/)[-a-zA-Z0-9+&@#/%?=~_|!:,.;]*[-a-zA-Z0-9+&@#/%=~_|])");
+
+    public static final OutputProcessor URL_PROCESSOR = new OutputProcessor() {
+
+        @Override
+        public boolean processLine(OutputDisplayer out, String line) {
+            Matcher m = URL_PATTERN.matcher(line);
+            int last = 0;
+            while (m.find()) {
+                String txt = line.substring(last, m.start());
+                String lnk = line.substring(m.start(), m.end());
+                last = m.end();
+                out.print(txt);
+                try {
+                    out.print(lnk, OutputListeners.openURL(new URL(lnk)));
+                } catch(MalformedURLException ex) {
+                    out.print(lnk);
+                }
+            }
+            if (last > 0) {
+                out.print(line.substring(last));
+            }
+            return last > 0;
+        }
+
+    };
+
+    public static final OutputProcessor TASK_LINE_PROCESSOR = new OutputProcessor() {
+        final Pattern TASK_LINE = Pattern.compile("> Task (:[\\w:\\-]+)( [\\w\\-]+)?"); //NOI18N
+        @Override
+        public boolean processLine(OutputDisplayer out, String line) {
+            Matcher m = TASK_LINE.matcher(line);
+            boolean ret = m.matches();
+            if (ret) {
+                String task = m.group(1);
+                String state = m.group(2);
+                out.print("> Task "); //NOI18N
+                out.print(task);
+                if (state != null) {
+                    IOColors.OutputType type = LOG_WARNING;
+                    if (state.endsWith("EXECUTED") || state.endsWith("UP-TO-DATE") || state.endsWith("FROM-CACHE")) { //NOI18N
+                        type = LOG_SUCCESS;
+                    } else if (state.endsWith("FAILED")) { //NOI18N
+                        type = LOG_FAILURE;
+                    }
+                    out.print(state , null, type);
+                }
+            }
+            return ret;
+        }
+    };
+
+    public static final OutputProcessor STATIC_STRING_PROCESSOR = new OutputProcessor() {
+        private static final String BUILD_FAILED_MSG = "BUILD FAILED"; //NOI18N
+        private static final String BUILD_SUCCESS_MSG = "BUILD SUCCESSFUL"; //NOI18N
+        private static final String COD_INCUBATION_MSG = "Configuration on demand is an incubating feature."; //NOI18N
+        private static final String CONFIG_CACHE_MGS = "Configuration cache "; //NOI18N
+
+        @Override
+        public boolean processLine(OutputDisplayer out, String line) {
+            IOColors.OutputType type = null;
+            if (line.startsWith(COD_INCUBATION_MSG) || line.startsWith(CONFIG_CACHE_MGS)) {
+                type = LOG_DEBUG;
+            } else if (line.startsWith(BUILD_SUCCESS_MSG)) {
+                type = LOG_SUCCESS;
+            } else if (line.startsWith(BUILD_FAILED_MSG)) {
+                type = LOG_FAILURE;
+            }
+            if (type != null) {
+                out.print(line, null, type);
+            }
+            return type != null;
+        }
+    };
+
+    static class WarningModeAllProcessor implements OutputProcessor {
+
+        private static Pattern WARNING_MODE_ALL = Pattern.compile("(.+ ')(\\-\\-warning\\-mode all)('.+)");
+        final RunConfig cfg;
+
+        public WarningModeAllProcessor(RunConfig cfg) {
+            this.cfg = cfg;
+        }
+
+        @Override
+        public boolean processLine(OutputDisplayer out, String line) {
+            Matcher m = WARNING_MODE_ALL.matcher(line);
+            if (m.matches()) {
+                out.print(m.group(1));
+                out.print(m.group(2), () -> {
+                    GradleCommandLine cmd = new GradleCommandLine(cfg.getCommandLine());
+                    cmd.addParameter(GradleCommandLine.Parameter.WARNING_MODE, "all");
+
+                    RunConfig warnAll = cfg.withCommandLine(cmd);
+                    RunUtils.executeGradle(warnAll, null);
+                });
+                out.print(m.group(3));
+                return true;
+            }
+            return false;
+        }
+
+    }
 }
