@@ -48,6 +48,7 @@ import org.netbeans.api.editor.NavigationHistory;
 import org.netbeans.api.editor.EditorActionNames;
 import org.netbeans.api.editor.caret.CaretInfo;
 import org.netbeans.api.editor.caret.EditorCaret;
+import org.netbeans.api.editor.document.LineDocumentUtils;
 import org.openide.util.Lookup;
 import org.openide.util.NbBundle;
 
@@ -78,6 +79,7 @@ public class ExtKit extends BaseKit {
      * its name is defined here for clarity
      * @deprecated Without any replacement.
      */
+    @Deprecated
     public static final String findAction = "find"; // NOI18N
 
     /** Open replace dialog action - this action is defined in view package, but
@@ -113,11 +115,13 @@ public class ExtKit extends BaseKit {
     /** Advanced code selection technique
      * @deprecated this action name is not actively used by ExtKit and will be removed in future releases.
      */
+    @Deprecated
     public static final String codeSelectAction = "code-select"; // NOI18N
 
     /** Action used when escape is pressed. By default it hides popup-menu
      * @deprecated this action name is not actively used by ExtKit and will be removed in future releases.
      */
+    @Deprecated
     public static final String escapeAction = "escape"; // NOI18N
 
     /** Find the completion help and show it in the completion pane. */
@@ -173,7 +177,7 @@ public class ExtKit extends BaseKit {
             try {
                 ClassLoader loader = Lookup.getDefault().lookup(ClassLoader.class);
                 Class extEditorUIClass = loader.loadClass("org.netbeans.editor.ext.ExtEditorUI"); //NOI18N
-                return (EditorUI) extEditorUIClass.newInstance();
+                return (EditorUI) extEditorUIClass.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 noExtEditorUIClass = true;
             }
@@ -193,12 +197,12 @@ public class ExtKit extends BaseKit {
         actions.add(new CommentAction()); // to make ctrl-shift-T in Netbeans55 profile work
         actions.add(new UncommentAction()); // to make ctrl-shift-D in Netbeans55 profile work
                 
-        return TextAction.augmentList(super.createActions(), actions.toArray(new Action[actions.size()]));
+        return TextAction.augmentList(super.createActions(), actions.toArray(new Action[0]));
     }
     
     /**
      * Action that is localized in org.netbeans.editor package.
-     * <br/>
+     * <br>
      * <code>BaseKit.class</code> is used as a bundle class.
      */
     private abstract static class BaseKitLocalizedAction extends BaseAction {
@@ -292,7 +296,7 @@ public class ExtKit extends BaseKit {
          * @param popupMenu popup menu to which this method should add
          *  the item corresponding to the action-name.
          * @param actionName name of the action to add. The real action
-         *  can be retrieved from the kit by calling <tt>getActionByName()</tt>.
+         *  can be retrieved from the kit by calling <code>getActionByName()</code>.
          */
         protected void addAction(JTextComponent target, JPopupMenu popupMenu,
         String actionName) {
@@ -317,7 +321,7 @@ public class ExtKit extends BaseKit {
                         }
                         item.setEnabled(a.isEnabled());
                         Object helpID = a.getValue ("helpID"); // NOI18N
-                        if (helpID != null && (helpID instanceof String))
+                        if (helpID instanceof String)
                             item.putClientProperty ("HelpID", helpID); // NOI18N
                     }
                 }
@@ -472,7 +476,7 @@ public class ExtKit extends BaseKit {
         *  of the line with the line-number equal to (lineOffset + 1).
         */
         protected int getOffsetFromLine(BaseDocument doc, int lineOffset) {
-            return Utilities.getRowStartFromLineOffset(doc, lineOffset);
+            return LineDocumentUtils.getLineStartFromIndex(doc, lineOffset);
         }
 
         public void actionPerformed(ActionEvent evt, JTextComponent target) {
@@ -487,6 +491,7 @@ public class ExtKit extends BaseKit {
      * Action to go to the declaration of the variable under the caret.
      * @deprecated this action is no longer used. It is reimplemented in editor.actions module.
      */
+    @Deprecated
     public static class GotoDeclarationAction extends BaseKitLocalizedAction {
 
         static final long serialVersionUID =-6440495023918097760L;
@@ -584,8 +589,9 @@ public class ExtKit extends BaseKit {
      * This action does nothing.
      * 
      * @deprecated Please use Braces Matching SPI instead, for details see
-     *   <a href="@org-netbeans-modules-editor-bracesmatching@/overview-summary.html">Editor Braces Matching</a>.
+     *   <a href="@org-netbeans-modules-editor-bracesmatching@/index.html">Editor Braces Matching</a>.
      */
+    @Deprecated
     public static class MatchBraceAction extends BaseKitLocalizedAction {
 // XXX: remove
 //        boolean select;
@@ -642,6 +648,7 @@ public class ExtKit extends BaseKit {
     /**
      * @deprecated this action is deprecated and will be removed in future releases.
      */
+    @Deprecated
     public static class CodeSelectAction extends BaseKitLocalizedAction {
 
         static final long serialVersionUID =4033474080778585860L;
@@ -899,18 +906,18 @@ public class ExtKit extends BaseKit {
                                     if (caretInfo.isSelectionShowing()) {
                                         int start = Math.min(caretInfo.getDot(), caretInfo.getMark());
                                         int end = Math.max(caretInfo.getDot(), caretInfo.getMark());
-                                        startPos = Utilities.getRowStart(doc, start);
+                                        startPos = LineDocumentUtils.getLineStartOffset(doc, start);
                                         endPos = end;
-                                        if (endPos > 0 && Utilities.getRowStart(doc, endPos) == endPos) {
+                                        if (endPos > 0 && LineDocumentUtils.getLineStartOffset(doc, endPos) == endPos) {
                                             endPos--;
                                         }
-                                        endPos = Utilities.getRowEnd(doc, endPos);
+                                        endPos = LineDocumentUtils.getLineEndOffset(doc, endPos);
                                     } else { // selection not visible
-                                        startPos = Utilities.getRowStart(doc, caretInfo.getDot());
-                                        endPos = Utilities.getRowEnd(doc, caretInfo.getDot());
+                                        startPos = LineDocumentUtils.getLineStartOffset(doc, caretInfo.getDot());
+                                        endPos = LineDocumentUtils.getLineEndOffset(doc, caretInfo.getDot());
                                     }
 
-                                    int lineCount = Utilities.getRowCount(doc, startPos, endPos);
+                                    int lineCount = LineDocumentUtils.getLineCount(doc, startPos, endPos);
                                     boolean comment = forceComment != null ? forceComment : !allComments(doc, startPos, lineCount);
 
                                     if (comment) {
@@ -933,18 +940,18 @@ public class ExtKit extends BaseKit {
                                 int endPos;
 
                                 if (Utilities.isSelectionShowing(caret)) {
-                                    startPos = Utilities.getRowStart(doc, target.getSelectionStart());
+                                    startPos = LineDocumentUtils.getLineStartOffset(doc, target.getSelectionStart());
                                     endPos = target.getSelectionEnd();
-                                    if (endPos > 0 && Utilities.getRowStart(doc, endPos) == endPos) {
+                                    if (endPos > 0 && LineDocumentUtils.getLineStartOffset(doc, endPos) == endPos) {
                                         endPos--;
                                     }
-                                    endPos = Utilities.getRowEnd(doc, endPos);
+                                    endPos = LineDocumentUtils.getLineEndOffset(doc, endPos);
                                 } else { // selection not visible
-                                    startPos = Utilities.getRowStart(doc, caret.getDot());
-                                    endPos = Utilities.getRowEnd(doc, caret.getDot());
+                                    startPos = LineDocumentUtils.getLineStartOffset(doc, caret.getDot());
+                                    endPos = LineDocumentUtils.getLineEndOffset(doc, caret.getDot());
                                 }
 
-                                int lineCount = Utilities.getRowCount(doc, startPos, endPos);
+                                int lineCount = LineDocumentUtils.getLineCount(doc, startPos, endPos);
                                 boolean comment = forceComment != null ? forceComment : !allComments(doc, startPos, lineCount);
 
                                 if (comment) {
@@ -964,12 +971,12 @@ public class ExtKit extends BaseKit {
         
         private boolean allComments(BaseDocument doc, int startOffset, int lineCount) throws BadLocationException {
             for (int offset = startOffset; lineCount > 0; lineCount--) {
-                int firstNonWhitePos = Utilities.getRowFirstNonWhite(doc, offset);
+                int firstNonWhitePos = LineDocumentUtils.getLineFirstNonWhitespace(doc, offset);
                 if (firstNonWhitePos == -1) {
                     return false;
                 }
                 
-                if (Utilities.getRowEnd(doc, firstNonWhitePos) - firstNonWhitePos < lineCommentStringLen) {
+                if (LineDocumentUtils.getLineEndOffset(doc, firstNonWhitePos) - firstNonWhitePos < lineCommentStringLen) {
                     return false;
                 }
                 
@@ -993,11 +1000,11 @@ public class ExtKit extends BaseKit {
         private void uncomment(BaseDocument doc, int startOffset, int lineCount) throws BadLocationException {
             for (int offset = startOffset; lineCount > 0; lineCount--) {
                 // Get the first non-whitespace char on the current line
-                int firstNonWhitePos = Utilities.getRowFirstNonWhite(doc, offset);
+                int firstNonWhitePos = LineDocumentUtils.getLineFirstNonWhitespace(doc, offset);
 
                 // If there is any, check wheter it's the line-comment-chars and remove them
                 if (firstNonWhitePos != -1) {
-                    if (Utilities.getRowEnd(doc, firstNonWhitePos) - firstNonWhitePos >= lineCommentStringLen) {
+                    if (LineDocumentUtils.getLineEndOffset(doc, firstNonWhitePos) - firstNonWhitePos >= lineCommentStringLen) {
                         CharSequence maybeLineComment = DocumentUtilities.getText(doc, firstNonWhitePos, lineCommentStringLen);
                         if (CharSequenceUtilities.textEquals(maybeLineComment, lineCommentString)) {
                             doc.remove(firstNonWhitePos, lineCommentStringLen);
@@ -1030,12 +1037,13 @@ public class ExtKit extends BaseKit {
 
     /** 
      * @deprecated Please do not subclass this class. Use Typing Hooks instead, for details see
-     *   <a href="@org-netbeans-modules-editor-lib2@/overview-summary.html">Editor Library 2</a>.
+     *   <a href="@org-netbeans-modules-editor-lib2@/index.html">Editor Library 2</a>.
      */
 //    @EditorActionRegistration(
 //            name = defaultKeyTypedAction,
 //            shortDescription = editorBundleHash + defaultKeyTypedAction
 //    )
+    @Deprecated
     public static class ExtDefaultKeyTypedAction extends DefaultKeyTypedAction {
 
         static final long serialVersionUID =5273032708909044812L;
@@ -1073,9 +1081,9 @@ public class ExtKit extends BaseKit {
         /** 
          * Check the characters that should cause reindenting the line. 
          * 
-         * @deprecated Please use <a href="@org-netbeans-modules-editor-indent@/org/netbeans/modules/editor/indent/spi/support/AutomatedIndenting.html">AutomatedIndentig</a>
+         * @deprecated Please use <a href="@org-netbeans-modules-editor-indent-support@/org/netbeans/modules/editor/indent/spi/support/AutomatedIndenting.html">AutomatedIndentig</a>
          *   or Typing Hooks instead, for details see
-         *   <a href="@org-netbeans-modules-editor-lib2@/overview-summary.html">Editor Library 2</a>.
+         *   <a href="@org-netbeans-modules-editor-lib2@/index.html">Editor Library 2</a>.
          */
         protected void checkIndentHotChars(JTextComponent target, String typedText) {
         }
@@ -1084,7 +1092,7 @@ public class ExtKit extends BaseKit {
         /** 
          * Check and possibly popup, hide or refresh the completion 
          * @deprecated Please use Editor Code Completion API instead, for details see
-         *   <a href="@org-netbeans-modules-editor-completion@/overview-summary.html">Editor Code Completion</a>.
+         *   <a href="@org-netbeans-modules-editor-completion@/index.html">Editor Code Completion</a>.
          */
         protected void checkCompletion(JTextComponent target, String typedText) {
         }
@@ -1092,8 +1100,9 @@ public class ExtKit extends BaseKit {
 
     /** 
      * @deprecated Please use Editor Code Completion API instead, for details see
-     *   <a href="@org-netbeans-modules-editor-completion@/overview-summary.html">Editor Code Completion</a>.
+     *   <a href="@org-netbeans-modules-editor-completion@/index.html">Editor Code Completion</a>.
      */
+    @Deprecated
     @EditorActionRegistration(
             name = completionShowAction,
             shortDescription = editorBundleHash + completionShowAction
@@ -1112,8 +1121,9 @@ public class ExtKit extends BaseKit {
 
     /** 
      * @deprecated Please use Editor Code Completion API instead, for details see
-     *   <a href="@org-netbeans-modules-editor-completion@/overview-summary.html">Editor Code Completion</a>.
+     *   <a href="@org-netbeans-modules-editor-completion@/index.html">Editor Code Completion</a>.
      */
+    @Deprecated
     @EditorActionRegistration(
             name = allCompletionShowAction,
             shortDescription = editorBundleHash + allCompletionShowAction
@@ -1130,8 +1140,9 @@ public class ExtKit extends BaseKit {
 
     /** 
      * @deprecated Please use Editor Code Completion API instead, for details see
-     *   <a href="@org-netbeans-modules-editor-completion@/overview-summary.html">Editor Code Completion</a>.
+     *   <a href="@org-netbeans-modules-editor-completion@/index.html">Editor Code Completion</a>.
      */
+    @Deprecated
     @EditorActionRegistration(
             name = documentationShowAction,
             shortDescription = editorBundleHash + documentationShowAction
@@ -1148,8 +1159,9 @@ public class ExtKit extends BaseKit {
 
     /** 
      * @deprecated Please use Editor Code Completion API instead, for details see
-     *   <a href="@org-netbeans-modules-editor-completion@/overview-summary.html">Editor Code Completion</a>.
+     *   <a href="@org-netbeans-modules-editor-completion@/index.html">Editor Code Completion</a>.
      */
+    @Deprecated
     @EditorActionRegistration(
             name = completionTooltipShowAction,
             shortDescription = editorBundleHash + completionTooltipShowAction
@@ -1166,9 +1178,10 @@ public class ExtKit extends BaseKit {
 
     /** 
      * @deprecated Please do not subclass this class. Use Typing Hooks instead, for details see
-     *   <a href="@org-netbeans-modules-editor-lib2@/overview-summary.html">Editor Library 2</a>.
+     *   <a href="@org-netbeans-modules-editor-lib2@/index.html">Editor Library 2</a>.
      */
-  public static class ExtDeleteCharAction extends DeleteCharAction {
+    @Deprecated
+    public static class ExtDeleteCharAction extends DeleteCharAction {
 
     public ExtDeleteCharAction(String nm, boolean nextChar) {
       super(nm, nextChar);
