@@ -29,15 +29,10 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.MissingResourceException;
 import java.util.ResourceBundle;
-import java.util.logging.Filter;
 import java.util.logging.Level;
 import java.util.logging.LogRecord;
 import java.util.logging.Logger;
 import javax.lang.model.util.Elements;
-import javax.persistence.EntityManager;
-import javax.persistence.EntityManagerFactory;
-import javax.persistence.EntityTransaction;
-import javax.persistence.Query;
 import org.eclipse.persistence.jpa.jpql.JPQLQueryProblem;
 import org.eclipse.persistence.jpa.jpql.JPQLQueryProblemResourceBundle;
 import org.eclipse.persistence.jpa.jpql.parser.DefaultJPQLGrammar;
@@ -51,13 +46,12 @@ import org.netbeans.api.project.Project;
 import org.netbeans.api.project.ProjectUtils;
 import org.netbeans.api.project.SourceGroup;
 import org.netbeans.modules.j2ee.metadata.model.api.MetadataModel;
-import org.netbeans.modules.j2ee.metadata.model.api.MetadataModelAction;
 import org.netbeans.modules.j2ee.persistence.api.EntityClassScope;
 import org.netbeans.modules.j2ee.persistence.api.PersistenceEnvironment;
 import org.netbeans.modules.j2ee.persistence.api.metadata.orm.EntityMappingsMetadata;
+import org.netbeans.modules.j2ee.persistence.dd.common.Persistence;
 import org.netbeans.modules.j2ee.persistence.dd.common.PersistenceUnit;
 import org.netbeans.modules.j2ee.persistence.provider.Provider;
-import org.netbeans.modules.j2ee.persistence.provider.ProviderUtil;
 import org.netbeans.modules.j2ee.persistence.spi.EntityClassScopeProvider;
 import org.netbeans.modules.j2ee.persistence.spi.jpql.ManagedTypeProvider;
 
@@ -66,17 +60,19 @@ import org.netbeans.modules.j2ee.persistence.spi.jpql.ManagedTypeProvider;
  */
 public class JPQLExecutor {
 
-    static private final String ECLIPSELINK_QUERY = "org.eclipse.persistence.jpa.JpaQuery";//NOI18N
-    static private final String ECLIPSELINK_QUERY_SQL0 = "getDatabaseQuery";//NOI18N
-    static private final String ECLIPSELINK_QUERY_SQL1 = "getSQLString";//NOI18N
-    static private final String HIBERNATE_QUERY = "org.hibernate.ejb.HibernateQuery";//NOI18N
-    static private final String HIBERNATE_QUERY_SQL0 = "getSessionFactory";//NOI18N
-    static private final String HIBERNATE_QUERY_SQL1 = "getQueryPlanCache";//NOI18N
-    static private final String HIBERNATE_QUERY_SQL2 = "getHQLQueryPlan";//NOI18N
-    static private final String HIBERNATE_QUERY_SQL3 = "getTranslators";//NOI18N
-    static private final String HIBERNATE_QUERY_SQL4 = "getSQLString";//NOI18N
-    static private final String OPENJPA_QUERY = "org.apache.openjpa.persistence.QueryImpl";//NOI18N
-    static private final String OPENJPA_QUERY_SQL = "getQueryString";//NOI18N
+    private static final Logger LOG = Logger.getLogger(JPQLExecutor.class.getName());
+
+    private static final String ECLIPSELINK_QUERY = "org.eclipse.persistence.jpa.JpaQuery";//NOI18N
+    private static final String ECLIPSELINK_QUERY_SQL0 = "getDatabaseQuery";//NOI18N
+    private static final String ECLIPSELINK_QUERY_SQL1 = "getSQLString";//NOI18N
+    private static final String HIBERNATE_QUERY = "org.hibernate.ejb.HibernateQuery";//NOI18N
+    private static final String HIBERNATE_QUERY_SQL0 = "getSessionFactory";//NOI18N
+    private static final String HIBERNATE_QUERY_SQL1 = "getQueryPlanCache";//NOI18N
+    private static final String HIBERNATE_QUERY_SQL2 = "getHQLQueryPlan";//NOI18N
+    private static final String HIBERNATE_QUERY_SQL3 = "getTranslators";//NOI18N
+    private static final String HIBERNATE_QUERY_SQL4 = "getSQLString";//NOI18N
+    private static final String OPENJPA_QUERY = "org.apache.openjpa.persistence.QueryImpl";//NOI18N
+    private static final String OPENJPA_QUERY_SQL = "getQueryString";//NOI18N
 
     /**
      * Executes given JPQL query and returns the result.
@@ -87,7 +83,8 @@ public class JPQLExecutor {
      * errors).
      */
     public JPQLResult execute(String jpql,
-            PersistenceUnit pu,
+            Persistence persistence,
+            PersistenceUnit persistenceUnit,
             final PersistenceEnvironment pe,
             HashMap<String, String> props,
             Provider provider,
@@ -96,102 +93,107 @@ public class JPQLExecutor {
             boolean execute) {
         JPQLResult result = new JPQLResult();
         jpql = jpql.trim();
-        EntityManagerFactory emf = null;
-        EntityManager em = null;
-        EntityTransaction transaction = null;
         try {
-            ph.progress(60);
+            Object emf = null;
+            Object em = null;
+            Object transaction = null;
+            try {
+                ph.progress(60);
 
-            Class pClass = Thread.currentThread().getContextClassLoader().loadClass("javax.persistence.Persistence");//NOI18N
-            javax.persistence.Persistence p = (javax.persistence.Persistence) pClass.newInstance();
-            
-            emf = p.createEntityManagerFactory(pu.getName(), props);
+                Class<?> pClass;
+                if (isJakarta(persistence.getVersion())) {
+                    pClass = Thread.currentThread().getContextClassLoader().loadClass("jakarta.persistence.Persistence");//NOI18N
+                } else {
+                    pClass = Thread.currentThread().getContextClassLoader().loadClass("javax.persistence.Persistence");//NOI18N
+                }
+                Object persistenceManager = pClass.getDeclaredConstructor().newInstance();
 
-            em = emf.createEntityManager();
+                emf = invokeReflectively(persistenceManager,
+                        "createEntityManagerFactory",
+                        List.of(String.class, Map.class),
+                        List.of(persistenceUnit.getName(), props));
 
-            Logger.getLogger("org.hibernate.hql.internal.ast.ErrorCounter").setFilter(new Filter() {//NOI18N
-                @Override
-                public boolean isLoggable(LogRecord record) {
-                    if (record.getLevel().intValue() > Level.INFO.intValue()) {//workaround to avoid exception dialog from nb for logged exception
+                em = invokeReflectively(emf, "createEntityManager", List.of(), List.of());
+
+                Logger.getLogger("org.hibernate.hql.internal.ast.ErrorCounter").setFilter( (LogRecord record) -> { //NOI18N
+                    //workaround to avoid exception dialog from nb for logged exception
+                    if (record.getLevel().intValue() > Level.INFO.intValue()) {
                         record.setLevel(Level.INFO);
                     }
                     return true;
-                }
-            });
-            Query query = em.createQuery(jpql);
-            String queryStr = null;
-            if (provider.equals(ProviderUtil.ECLIPSELINK_PROVIDER2_0) || provider.equals(ProviderUtil.ECLIPSELINK_PROVIDER)) {//NOI18N
-                Class qClass = Thread.currentThread().getContextClassLoader().loadClass(ECLIPSELINK_QUERY);
-                if (qClass != null) {
-                    Method method = qClass.getMethod(ECLIPSELINK_QUERY_SQL0);
-                    if (method != null) {
-                        Object dqOject = method.invoke(query);
-                        Method method2 = (dqOject != null ? dqOject.getClass().getMethod(ECLIPSELINK_QUERY_SQL1) : null);
-                        if (method2 != null) {
-                            queryStr = (String) method2.invoke(dqOject);
+                });
+                Object query = invokeReflectively(em, "createQuery", List.of(String.class), List.of(jpql));
+                String queryStr = null;
+                if ("org.eclipse.persistence.jpa.PersistenceProvider".equals(provider.getProviderClass())) {
+                    Class<?> qClass = Thread.currentThread().getContextClassLoader().loadClass(ECLIPSELINK_QUERY);
+                    if (qClass != null) {
+                        Method method = qClass.getMethod(ECLIPSELINK_QUERY_SQL0);
+                        if (method != null) {
+                            Object dqOject = method.invoke(query);
+                            Method method2 = (dqOject != null ? dqOject.getClass().getMethod(ECLIPSELINK_QUERY_SQL1) : null);
+                            if (method2 != null) {
+                                queryStr = (String) method2.invoke(dqOject);
+                            }
+                        }
+                    }
+                } else if ("org.hibernate.jpa.HibernatePersistenceProvider".equals(provider.getProviderClass())) {
+                    Method method = emf.getClass().getMethod(HIBERNATE_QUERY_SQL0);
+                    Object sessionFactoryImpl = method.invoke(emf);
+                    Method method2 = sessionFactoryImpl.getClass().getMethod(HIBERNATE_QUERY_SQL1);
+                    Object qPlanCache = method2.invoke(sessionFactoryImpl);
+                    Method method3 = qPlanCache.getClass().getMethod(HIBERNATE_QUERY_SQL2, String.class, boolean.class, Map.class);
+                    Object cache = method3.invoke(qPlanCache, jpql, true, Collections.emptyMap());
+                    Method method4 = cache.getClass().getMethod(HIBERNATE_QUERY_SQL3);
+                    Object[] translators = (Object[]) method4.invoke(cache);
+                    StringBuilder stringBuff = new StringBuilder();
+                    if (translators != null && translators.length > 0) {
+                        Method method5 = translators[0].getClass().getMethod(HIBERNATE_QUERY_SQL4);
+                        for (Object translator : translators) {
+                            stringBuff.append(method5.invoke(translator)).append("\n");
+                        }
+                    }
+                    queryStr = stringBuff.toString();
+                } else if ("org.apache.openjpa.persistence.PersistenceProviderImpl".equals(provider.getProviderClass())) {
+                    Class<?> qClass = Thread.currentThread().getContextClassLoader().loadClass(OPENJPA_QUERY);
+                    if(qClass !=null) {
+                        Method method = qClass.getMethod(OPENJPA_QUERY_SQL);
+                        if(method != null){
+                            queryStr = (String) method.invoke(query);
                         }
                     }
                 }
-            } else if (provider.equals(ProviderUtil.HIBERNATE_PROVIDER2_0) || provider.equals(ProviderUtil.HIBERNATE_PROVIDER2_1)) {//NOI18N
-                Method method = emf.getClass().getMethod(HIBERNATE_QUERY_SQL0);
-                Object sessionFactoryImpl = method.invoke(emf);
-                Method method2 = sessionFactoryImpl.getClass().getMethod(HIBERNATE_QUERY_SQL1);
-                Object qPlanCache = method2.invoke(sessionFactoryImpl);
-                Method method3 = qPlanCache.getClass().getMethod(HIBERNATE_QUERY_SQL2, String.class, boolean.class, Map.class);
-                Object cache = method3.invoke(qPlanCache, jpql, true, Collections.emptyMap());
-                Method method4 = cache.getClass().getMethod(HIBERNATE_QUERY_SQL3);
-                Object[] translators = (Object[]) method4.invoke(cache);
-                StringBuilder stringBuff = new StringBuilder();
-                if (translators != null && translators.length > 0) {
-                    Method method5 = translators[0].getClass().getMethod(HIBERNATE_QUERY_SQL4);
-                    for (Object translator : translators) {
-                        stringBuff.append(method5.invoke(translator)).append("\n");
+                result.setSqlQuery(queryStr);
+                //
+                ph.progress(70);
+                if (execute) {
+                    transaction = invokeReflectively(em, "getTransaction", List.of(), List.of());
+                    invokeReflectively(transaction, "begin", List.of(), List.of());
+                    invokeReflectively(query, "setMaxResults", List.of(int.class), List.of(maxRowCount));
+
+
+                    String jpql0 = jpql.toUpperCase();
+
+                    if (jpql0.startsWith("UPDATE") || jpql0.startsWith("DELETE")) { //NOI18N
+                        result.setUpdateOrDeleteResult((int) invokeReflectively(query, "executeUpdate", List.of(), List.of()));
+                    } else {
+                        result.setQueryResults((List) invokeReflectively(query, "getResultList", List.of(), List.of()));
                     }
+                    invokeReflectively(transaction, "commit", List.of(), List.of());
                 }
-                queryStr = stringBuff.toString();
-            }// else if (provider.getProviderClass().contains("openjpa")){//NOI18N
-//                Class qClass = Thread.currentThread().getContextClassLoader().loadClass(OPENJPA_QUERY);
-//                if(qClass !=null) {
-//                    Method method = qClass.getMethod(OPENJPA_QUERY_SQL);
-//                    if(method != null){
-//                        queryStr = (String) method.invoke(query);
-//                    }
-//                }
-//            } 
-            result.setSqlQuery(queryStr);
-            //
-            ph.progress(70);
-            if (execute) {
-                transaction = em.getTransaction();
-                transaction.begin();
-                query.setMaxResults(maxRowCount);
-
-                
-                String jpql0 = jpql.toUpperCase();
-
-                if (jpql0.startsWith("UPDATE") || jpql0.startsWith("DELETE")) { //NOI18N
-                    result.setUpdateOrDeleteResult(query.executeUpdate());
-                } else {
-                    result.setQueryResults(query.getResultList());
-                }
-                transaction.commit();
-            }
-        } catch (Exception e) {
-            result.getExceptions().add(e);
-            final Project project = pe.getProject();
-            SourceGroup[] sourceGroups = ProjectUtils.getSources(project).getSourceGroups(JavaProjectConstants.SOURCES_TYPE_JAVA);
-            JavaSource js = JavaSource.create(ClasspathInfo.create(sourceGroups[0].getRootFolder()));
-            final List<JPQLQueryProblem> problems = new ArrayList<JPQLQueryProblem>();
-            final String jpql0 = jpql;
-            try {
-                js.runUserActionTask(new org.netbeans.api.java.source.Task<CompilationController>() {
-                    @Override
-                    public void run(CompilationController controller) throws Exception {
+            } catch (ReflectiveOperationException | RuntimeException e) {
+                result.getExceptions().add(e);
+                final Project project = pe.getProject();
+                SourceGroup[] sourceGroups = ProjectUtils.getSources(project).getSourceGroups(JavaProjectConstants.SOURCES_TYPE_JAVA);
+                JavaSource js = JavaSource.create(ClasspathInfo.create(sourceGroups[0].getRootFolder()));
+                final List<JPQLQueryProblem> problems = new ArrayList<>();
+                final String jpql0 = jpql;
+                try {
+                    js.runUserActionTask( (CompilationController controller) -> {
                         controller.toPhase(JavaSource.Phase.ELEMENTS_RESOLVED);
-                        EntityClassScopeProvider provider = (EntityClassScopeProvider) project.getLookup().lookup(EntityClassScopeProvider.class);
+                        EntityClassScopeProvider provider1 = project.getLookup().lookup(EntityClassScopeProvider.class);
                         EntityClassScope ecs = null;
-                        if (provider != null) {
-                            ecs = provider.findEntityClassScope(pe.getLocation().getFileObject("persistence.xml"));
+                        if (provider1 != null) {
+                            ecs = provider1.findEntityClassScope(pe.getLocation().getFileObject("persistence.xml"));
                         }
                         EntityClassScope scope = ecs;
                         MetadataModel<EntityMappingsMetadata> entityMappingsModel = null;
@@ -200,54 +202,74 @@ public class JPQLExecutor {
                         }
                         if (entityMappingsModel != null) {
                             final Elements elms = controller.getElements();
-                            entityMappingsModel.runReadAction(new MetadataModelAction<EntityMappingsMetadata, Boolean>() {
-                                @Override
-                                public Boolean run(EntityMappingsMetadata metadata) throws Exception {
-                                    ManagedTypeProvider mtp = new ManagedTypeProvider(project, metadata, elms);
-                                    //////////////////////
-                                    DefaultJPQLQueryHelper  helper = new DefaultJPQLQueryHelper (DefaultJPQLGrammar.instance());
-                                    helper.setQuery(new org.netbeans.modules.j2ee.persistence.spi.jpql.Query(null, jpql0, mtp));
+                            entityMappingsModel.runReadAction( (EntityMappingsMetadata metadata) -> {
+                                ManagedTypeProvider mtp = new ManagedTypeProvider(project, metadata, elms);
+                                DefaultJPQLQueryHelper  helper = new DefaultJPQLQueryHelper (DefaultJPQLGrammar.instance());
+                                helper.setQuery(new org.netbeans.modules.j2ee.persistence.spi.jpql.Query(null, jpql0, mtp));
 
-                                    try {
-                                        problems.addAll(helper.validate());
-                                    } catch (Exception ex) {
-                                    }
-                                    /////////////////////
-                                    return null;
+                                try {
+                                    problems.addAll(helper.validate());
+                                } catch (Exception ex) {
                                 }
+                                return null;
                             });
                         }
+                    }, false);
+                } catch (IOException ex) {
+                } finally {
+                    if(transaction != null){
+                        invokeReflectively(transaction, "isActive");
+                        invokeReflectively(transaction, "rollback");
                     }
-                }, false);
-            } catch (IOException ex) {
-            } finally {
-                if(transaction != null){
-                    transaction.isActive();
-                    transaction.rollback();
+                    if(em != null) {
+                        invokeReflectively(em, "clear");
+                        invokeReflectively(em, "close");
+                    }
+                    if(emf != null) {
+                        invokeReflectively(emf, "close");
+                    }
                 }
-                if(em != null) {
-                    em.clear();
-                    em.close();
-                }
-                if(emf != null) {
-                    emf.close();
+                if (!problems.isEmpty()) {
+                    //use parsed result for errors
+                    StringBuilder message = new StringBuilder();
+                    for (int i = 0; i < problems.size(); i++) {
+                        ListResourceBundle msgBundle;
+                        try {
+                            msgBundle = (ListResourceBundle) ResourceBundle.getBundle(JPQLQueryProblemResourceBundle.class.getName());//NOI18N
+                        } catch (MissingResourceException ex) {//default en
+                            msgBundle = (ListResourceBundle) ResourceBundle.getBundle(JPQLQueryProblemResourceBundle.class.getName(), Locale.ENGLISH);//NOI18N
+                        }
+                        message.append(java.text.MessageFormat.format(msgBundle.getString(problems.get(i).getMessageKey()), (Object[]) problems.get(i).getMessageArguments())).append("\n");
+                    }
+                    result.setQueryProblems(message.toString());
                 }
             }
-            if (problems.size() > 0) {
-                //use parsed result for errors
-                StringBuilder message = new StringBuilder();
-                for (int i = 0; i < problems.size(); i++) {
-                    ListResourceBundle msgBundle;
-                    try {
-                        msgBundle = (ListResourceBundle) ResourceBundle.getBundle(JPQLQueryProblemResourceBundle.class.getName());//NOI18N
-                    } catch (MissingResourceException ex) {//default en
-                        msgBundle = (ListResourceBundle) ResourceBundle.getBundle(JPQLQueryProblemResourceBundle.class.getName(), Locale.ENGLISH);//NOI18N
-                    }
-                    message.append(java.text.MessageFormat.format(msgBundle.getString(problems.get(i).getMessageKey()), (Object[]) problems.get(i).getMessageArguments())).append("\n");
-                }
-                result.setQueryProblems(message.toString());
-            }
+        } catch (SecurityException | ReflectiveOperationException ex) {
+            // These catches only cover the transaction, entity manager and
+            // entity manager factory cleanups.
+            LOG.log(Level.INFO, "Failed to execute JPA query", ex);
         }
         return result;
+    }
+
+    private Object invokeReflectively(Object thisObj, String methodName) throws SecurityException, ReflectiveOperationException {
+        return invokeReflectively(thisObj, methodName, List.of(), List.of());
+    }
+
+    private Object invokeReflectively(Object thisObj, String methodName, List<?> parameterClass, List<Object> args) throws SecurityException, ReflectiveOperationException {
+        Class<?> clazz = thisObj.getClass();
+        Method targetMethod = clazz.getMethod(methodName, parameterClass.toArray(Class<?>[]::new));
+        return targetMethod.invoke(thisObj, args.toArray(Object[]::new));
+    }
+
+    private boolean isJakarta(String versionString) {
+        String[] versionParts = versionString.split("\\.");
+        Integer version = null;
+        try {
+            version = Integer.valueOf(versionParts[0]);
+        } catch (NumberFormatException | ArrayIndexOutOfBoundsException ex) {
+            LOG.log(Level.INFO, "Failed to parse persistence version: " + versionString, ex);
+        }
+        return version == null || version >= 3;
     }
 }
