@@ -23,6 +23,7 @@ import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import javax.lang.model.SourceVersion;
 
 import javax.swing.text.Document;
 
@@ -41,6 +42,7 @@ import org.netbeans.api.lexer.Language;
 import org.netbeans.core.startup.Main;
 import org.netbeans.junit.NbTestCase;
 import org.netbeans.modules.java.editor.base.imports.UnusedImports;
+import org.netbeans.modules.java.source.parsing.JavacParser;
 import org.netbeans.modules.parsing.impl.indexing.CacheFolder;
 import org.netbeans.modules.parsing.impl.indexing.RepositoryUpdater;
 import org.netbeans.spi.java.classpath.support.ClassPathSupport;
@@ -333,8 +335,172 @@ public class UnusedImportsTest extends NbTestCase {
                                                "}\n"));
     }
 
+    public void testModuleInfo() throws Exception {
+        SourceUtilsTestUtil.setSourceLevel(src, "11");
+        writeFilesAndWaitForScan(src,
+                                 new File("module-info.java",
+                                          "import java.util.List;\n" +
+                                          "import test.Ann;\n" +
+                                          "import test.Service1;\n" +
+                                          "import test.Service2;\n" +
+                                          "import test.Service2Impl;\n" +
+                                          "@Ann\n" +
+                                          "module m {\n" +
+                                          "    uses Service1;\n" +
+                                          "    uses Service2;\n" +
+                                          "    provides Service2 with Service2Impl;\n" +
+                                          "}\n"),
+                                 new File("test/Ann.java",
+                                          "package test;\n" +
+                                          "public @interface Ann { }"),
+                                 new File("test/Service1.java",
+                                          "package test;\n" +
+                                          "public interface Service1 { }"),
+                                 new File("test/Service2.java",
+                                          "package test;\n" +
+                                          "public interface Service2 { }"),
+                                 new File("test/Service2Impl.java",
+                                          "package test;\n" +
+                                          "public class Service2Impl implements Service2 { }"));
+
+        performUnusedImportsTestForFile("module-info.java",
+                                        "import java.util.List;\n");
+    }
+
+    public void testModuleImport1() throws Exception {
+        SourceUtilsTestUtil.setCompilerOptions(src, List.of("--enable-preview"));
+        SourceUtilsTestUtil.setSourceLevel(src, "" + SourceVersion.latest().ordinal());
+        writeFilesAndWaitForScan(src,
+                                 new File("test/Main.java",
+                                          """
+                                          package test;
+                                          import module java.base;
+                                          public class Main {
+                                              List<String> l = new ArrayList<>();
+                                          }
+                                          """));
+
+        performUnusedImportsTest();
+    }
+
+    public void testModuleImport2() throws Exception {
+        SourceUtilsTestUtil.setCompilerOptions(src, List.of("--enable-preview"));
+        SourceUtilsTestUtil.setSourceLevel(src, "" + SourceVersion.latest().ordinal());
+        writeFilesAndWaitForScan(src,
+                                 new File("test/Main.java",
+                                          """
+                                          package test;
+                                          import module java.base;
+                                          import java.util.*;
+                                          public class Main {
+                                              List<String> l = new ArrayList<>();
+                                          }
+                                          """));
+
+        performUnusedImportsTest("import module java.base;\n");
+    }
+
+    public void testModuleImport3() throws Exception {
+        SourceUtilsTestUtil.setCompilerOptions(src, List.of("--enable-preview"));
+        SourceUtilsTestUtil.setSourceLevel(src, "" + SourceVersion.latest().ordinal());
+        writeFilesAndWaitForScan(src,
+                                 new File("module-info.java",
+                                          """
+                                          module m {
+                                              requires transitive java.compiler;
+                                          }
+                                          """),
+                                 new File("test/Main.java",
+                                          """
+                                          package test;
+                                          import module m;
+                                          public class Main {
+                                              ToolProvider p;
+                                          }
+                                          """));
+
+        performUnusedImportsTest();
+    }
+
+    public void testModuleImport4() throws Exception {
+        SourceUtilsTestUtil.setCompilerOptions(src, List.of("--enable-preview"));
+        SourceUtilsTestUtil.setSourceLevel(src, "" + SourceVersion.latest().ordinal());
+        writeFilesAndWaitForScan(src,
+                                 new File("module-info.java",
+                                          """
+                                          module m {
+                                              requires java.compiler;
+                                          }
+                                          """),
+                                 new File("test/Main.java",
+                                          """
+                                          package test;
+                                          import module m;
+                                          public class Main {
+                                              ToolProvider p;
+                                          }
+                                          """));
+
+        performUnusedImportsTest("import module m;\n");
+    }
+
+    public void testModuleImport5() throws Exception {
+        SourceUtilsTestUtil.setCompilerOptions(src, List.of("--enable-preview"));
+        SourceUtilsTestUtil.setSourceLevel(src, "" + SourceVersion.latest().ordinal());
+        writeFilesAndWaitForScan(src,
+                                 new File("module-info.java",
+                                          """
+                                          module m {
+                                              requires java.compiler;
+                                          }
+                                          """),
+                                 new File("test/Main.java",
+                                          """
+                                          package test;
+                                          import module m;
+                                          import module java.compiler;
+                                          public class Main {
+                                              ToolProvider p;
+                                          }
+                                          """));
+
+        performUnusedImportsTest("import module m;\n");
+    }
+
+    public void testModuleImportSamePackage() throws Exception {
+        SourceUtilsTestUtil.setCompilerOptions(src, List.of("--enable-preview"));
+        SourceUtilsTestUtil.setSourceLevel(src, "" + SourceVersion.latest().ordinal());
+        writeFilesAndWaitForScan(src,
+                                 new File("module-info.java",
+                                          """
+                                          module m {
+                                              exports m_api;
+                                          }
+                                          """),
+                                 new File("test/Test.java",
+                                          """
+                                          package m_api;
+                                          public class Test {
+                                          }
+                                          """),
+                                 new File("test/Main.java",
+                                          """
+                                          package m_api;
+                                          import module m;
+                                          public class Main {
+                                              Test p;
+                                          }
+                                          """));
+
+        performUnusedImportsTest("import module m;\n");
+    }
+
     private void performUnusedImportsTest(String... golden) throws Exception {
-        CompilationInfo ci = SourceUtilsTestUtil.getCompilationInfo(JavaSource.forFileObject(src.getFileObject("test/Main.java")), Phase.RESOLVED);
+        performUnusedImportsTestForFile("test/Main.java", golden);
+    }
+
+    private void performUnusedImportsTestForFile(String fileName, String... golden) throws Exception {
+        CompilationInfo ci = SourceUtilsTestUtil.getCompilationInfo(JavaSource.forFileObject(src.getFileObject(fileName)), Phase.RESOLVED);
         SourceUtilsTestUtil2.disableConfinementTest();
         Document doc = ci.getSnapshot().getSource().getDocument(true);
         doc.putProperty(Language.class, JavaTokenId.language());
@@ -398,4 +564,7 @@ public class UnusedImportsTest extends NbTestCase {
         }
     }
 
+    static {
+        JavacParser.DISABLE_SOURCE_LEVEL_DOWNGRADE = true;
+    }
 }
