@@ -35,17 +35,14 @@ import com.sun.source.util.DocTreePathScanner;
 import com.sun.source.util.SourcePositions;
 import com.sun.source.util.TreePath;
 import org.netbeans.api.java.source.support.ErrorAwareTreePathScanner;
-import org.netbeans.api.java.source.support.ErrorAwareTreeScanner;
 import com.sun.source.util.Trees;
 import com.sun.tools.javac.api.JavacScope;
-import com.sun.tools.javac.api.JavacTrees;
 import com.sun.tools.javac.code.Flags;
 import com.sun.tools.javac.code.Symbol;
 import com.sun.tools.javac.code.Type;
 import com.sun.tools.javac.comp.AttrContext;
 import com.sun.tools.javac.comp.Enter;
 import com.sun.tools.javac.comp.Env;
-import com.sun.tools.javac.comp.Resolve;
 import com.sun.tools.javac.tree.DCTree.DCReference;
 import com.sun.tools.javac.tree.JCTree;
 import com.sun.tools.javac.tree.JCTree.JCMethodDecl;
@@ -72,26 +69,18 @@ import javax.tools.SimpleJavaFileObject;
 
 import com.sun.source.util.DocTrees;
 import com.sun.tools.javac.api.JavacTaskImpl;
-import com.sun.tools.javac.code.Kinds;
-import com.sun.tools.javac.comp.ArgumentAttr;
 import com.sun.tools.javac.comp.Attr;
-import com.sun.tools.javac.comp.Check.CheckContext;
-import com.sun.tools.javac.comp.DeferredAttr;
-import com.sun.tools.javac.comp.InferenceContext;
 import com.sun.tools.javac.main.JavaCompiler;
 import com.sun.tools.javac.parser.JavacParser;
 import com.sun.tools.javac.parser.Parser;
 import com.sun.tools.javac.parser.ParserFactory;
-import com.sun.tools.javac.parser.ScannerFactory;
-import com.sun.tools.javac.tree.JCTree.JCBlock;
 import com.sun.tools.javac.tree.JCTree.JCClassDecl;
 import com.sun.tools.javac.tree.JCTree.JCCompilationUnit;
 import com.sun.tools.javac.tree.JCTree.JCExpression;
+import com.sun.tools.javac.tree.JCTree.JCLambda;
 import com.sun.tools.javac.tree.JCTree.JCVariableDecl;
 import com.sun.tools.javac.util.JCDiagnostic;
 import com.sun.tools.javac.util.Log;
-import com.sun.tools.javac.util.Names;
-import com.sun.tools.javac.util.Warner;
 import java.lang.reflect.Method;
 import org.netbeans.api.annotations.common.CheckForNull;
 import org.netbeans.api.annotations.common.NonNull;
@@ -99,20 +88,17 @@ import org.netbeans.api.annotations.common.NullAllowed;
 import org.netbeans.api.java.lexer.JavaTokenId;
 import org.netbeans.api.java.lexer.JavadocTokenId;
 import org.netbeans.api.java.source.JavaSource.Phase;
+import org.netbeans.api.lexer.Token;
 import org.netbeans.api.lexer.TokenSequence;
-import org.netbeans.lib.nbjavac.services.CancelService;
 import org.netbeans.lib.nbjavac.services.NBAttr;
-import org.netbeans.lib.nbjavac.services.NBParserFactory;
 import org.netbeans.lib.nbjavac.services.NBResolve;
 import org.netbeans.modules.java.source.TreeUtilitiesAccessor;
 import org.netbeans.modules.java.source.builder.CommentHandlerService;
 import org.netbeans.modules.java.source.builder.CommentSetImpl;
-import org.netbeans.modules.java.source.matching.CopyFinder;
 import org.netbeans.modules.java.source.matching.CopyFinder.HackScope;
 import org.netbeans.modules.java.source.pretty.ImportAnalysis2;
 import org.netbeans.modules.java.source.transform.ImmutableDocTreeTranslator;
 import org.netbeans.modules.java.source.transform.ImmutableTreeTranslator;
-import org.openide.util.Exceptions;
 
 /**
  *
@@ -122,11 +108,42 @@ public final class TreeUtilities {
     
     private static final Logger LOG = Logger.getLogger(TreeUtilities.class.getName());
 
-    /**{@link Kind}s that are represented by {@link ClassTree}.
+    /**
+     * {@link Kind}s that are represented by {@link ClassTree}.
      * 
      * @since 0.67
      */
-    public static final Set<Kind> CLASS_TREE_KINDS = EnumSet.of(Kind.ANNOTATION_TYPE, Kind.CLASS, Kind.ENUM, Kind.INTERFACE, Kind.RECORD);
+    public static final Set<Kind> CLASS_TREE_KINDS = Collections.unmodifiableSet(EnumSet.of(
+            Kind.ANNOTATION_TYPE,
+            Kind.CLASS,
+            Kind.ENUM,
+            Kind.INTERFACE,
+            Kind.RECORD
+    ));
+
+    private static final Set<JavaTokenId> SPAN_COMMENT_TOKENS = EnumSet.of(
+            JavaTokenId.DOT,
+            JavaTokenId.WHITESPACE,
+            JavaTokenId.BLOCK_COMMENT,
+            JavaTokenId.LINE_COMMENT,
+            JavaTokenId.JAVADOC_COMMENT
+    );
+
+    private static final Set<JavaTokenId> SPAN_CLASS_TOKENS = EnumSet.of(
+            JavaTokenId.CLASS,
+            JavaTokenId.INTERFACE,
+            JavaTokenId.ENUM,
+            JavaTokenId.AT,
+            JavaTokenId.WHITESPACE,
+            JavaTokenId.BLOCK_COMMENT,
+            JavaTokenId.LINE_COMMENT,
+            JavaTokenId.JAVADOC_COMMENT
+    );
+
+    private static final Set<String> SPAN_CLASS_IDENTIFIERS = Set.of(
+            "record"
+    );
+
     private final CompilationInfo info;
     private final CommentHandlerService handler;
     
@@ -163,12 +180,20 @@ public final class TreeUtilities {
     }
 
     /**
-     * Checks wheteher given variable tree represents an enum constant.
+     * Checks whether given variable tree represents an enum constant.
      */
     public boolean isEnumConstant(VariableTree tree) {
         return (((JCTree.JCModifiers) tree.getModifiers()).flags & Flags.ENUM) != 0;
     }
-    
+
+    /**
+     * Checks whether given variable tree represents a record component.
+     * @since 2.79.0
+     */
+    public boolean isRecordComponent(VariableTree tree) {
+        return (((JCTree.JCModifiers) tree.getModifiers()).flags & Flags.RECORD) != 0;
+    }
+
     /**Checks whether the given tree represents an annotation.
      * @deprecated since 0.67, <code>Tree.getKind() == Kind.ANNOTATION_TYPE</code> should be used instead.
      */
@@ -178,7 +203,7 @@ public final class TreeUtilities {
     }
     
     /**
-     * Checks wheteher given compilation unit represents a package-info.
+     * Checks whether given compilation unit represents a package-info.
      * @since 2.23
     */
     public boolean isPackageInfo(CompilationUnitTree tree) {
@@ -186,16 +211,24 @@ public final class TreeUtilities {
     }
     
     /**
-     * Checks wheteher given compilation unit represents a module-info.
+     * Checks whether given compilation unit represents a module-info.
      * @since 2.23
      */
     public boolean isModuleInfo(CompilationUnitTree tree) {
         return TreeInfo.isModuleInfo((JCTree.JCCompilationUnit)tree);
     }
     
+    /**
+     * Checks whether given expression represents an expression statement.
+     * @since 2.56
+     */
+    public boolean isExpressionStatement(ExpressionTree tree) {
+        return TreeInfo.isExpressionStatement((JCTree.JCExpression)tree);
+    }
+    
     /**Returns whether or not the given tree is synthetic - generated by the parser.
-     * Please note that this method does not check trees transitively - a child of a syntetic tree
-     * may be considered non-syntetic.
+     * Please note that this method does not check trees transitively - a child of a synthetic tree
+     * may be considered non-synthetic.
      * 
      * @return true if the given tree is synthetic, false otherwise
      * @throws NullPointerException if the given tree is null
@@ -207,19 +240,51 @@ public final class TreeUtilities {
         while (path != null) {
             if (isSynthetic(path.getCompilationUnit(), path.getLeaf()))
                 return true;
-            if (path.getParentPath() != null &&
-                path.getParentPath().getParentPath() != null &&
-                path.getParentPath().getParentPath().getLeaf().getKind() == Kind.NEW_CLASS) {
-                NewClassTree nct = (NewClassTree) path.getParentPath().getParentPath().getLeaf();
-                ClassTree body = nct.getClassBody();
-
-                if (body != null &&
-                    (body.getExtendsClause() == path.getLeaf() ||
-                     body.getImplementsClause().contains(path.getLeaf()))) {
-                    return true;
+            if (path.getParentPath() != null && path.getParentPath().getParentPath() != null) {
+                TreePath grandpa = path.getParentPath().getParentPath();
+                if (grandpa.getLeaf().getKind() == Kind.NEW_CLASS) {
+                    NewClassTree nct = (NewClassTree) grandpa.getLeaf();
+                    ClassTree body = nct.getClassBody();
+                    if (body != null &&
+                        (body.getExtendsClause() == path.getLeaf() ||
+                         body.getImplementsClause().contains(path.getLeaf()))) {
+                        return true;
+                    }
+                } else if (grandpa.getLeaf().getKind() == Kind.RECORD &&
+                           path.getLeaf().getKind() == Kind.VARIABLE &&
+                           path.getParentPath().getLeaf().getKind() == Kind.METHOD) {
+                    JCMethodDecl m = (JCMethodDecl) path.getParentPath().getLeaf();
+                    if ((m.mods.flags & Flags.COMPACT_RECORD_CONSTRUCTOR) != 0 && m.getParameters().contains(path.getLeaf())) {
+                        return true;
+                    }
                 }
             }
+            if (path.getParentPath() != null) {
+                Tree parentLeaf = path.getParentPath().getLeaf();
+                if (parentLeaf.getKind() == Kind.VARIABLE) {
+                    JCVariableDecl var = (JCVariableDecl) parentLeaf;
+                    if (var.declaredUsingVar() && var.vartype == path.getLeaf()) {
+                        return true;
+                    }
+                    if (path.getParentPath().getParentPath() != null) {
+                        Tree parentParentLeaf = path.getParentPath().getParentPath().getLeaf();
 
+                        if (parentParentLeaf.getKind() == Kind.LAMBDA_EXPRESSION) {
+                            JCLambda let = (JCLambda) parentParentLeaf;
+
+                            if (let.paramKind == JCLambda.ParameterKind.IMPLICIT && let.getParameters().contains(parentLeaf)) {
+                                return true;
+                            }
+                        }
+                    }
+                } else if (parentLeaf.getKind() == Kind.LAMBDA_EXPRESSION
+                        && (path.getLeaf().getKind() == Kind.MEMBER_SELECT || path.getLeaf().getKind() == Kind.PRIMITIVE_TYPE)) {
+                    JCLambda let = (JCLambda) parentLeaf;
+                    if (let.paramKind == JCLambda.ParameterKind.IMPLICIT) {
+                        return true;
+                    }
+                }
+            }
             path = path.getParentPath();
         }
         
@@ -345,6 +410,7 @@ public final class TreeUtilities {
         return pathFor(path, pos, info.getTrees().getSourcePositions());
     }
 
+    @SuppressWarnings("AssignmentToMethodParameter")
     public TreePath pathFor(TreePath path, int pos, SourcePositions sourcePositions) {
         if (info == null || path == null || sourcePositions == null)
             throw new IllegalArgumentException();
@@ -358,21 +424,31 @@ public final class TreeUtilities {
         
         class PathFinder extends ErrorAwareTreePathScanner<Void,Void> {
             private int pos;
-            private SourcePositions sourcePositions;
+            private final SourcePositions sourcePositions;
             
             private PathFinder(int pos, SourcePositions sourcePositions) {
                 this.pos = pos;
                 this.sourcePositions = sourcePositions;
             }
             
+            @Override
             public Void scan(Tree tree, Void p) {
                 if (tree != null) {
-                    long endPos = sourcePositions.getEndPosition(getCurrentPath().getCompilationUnit(), tree);
-                    if (endPos == (-1) && tree.getKind() == Kind.ASSIGNMENT && getCurrentPath().getLeaf().getKind() == Kind.ANNOTATION) {
-                        ExpressionTree value = ((AssignmentTree) tree).getExpression();
-                        endPos = sourcePositions.getEndPosition(getCurrentPath().getCompilationUnit(), value);
+                    CompilationUnitTree cut = getCurrentPath().getCompilationUnit();
+                    long startPos = sourcePositions.getStartPosition(cut, tree);
+                    long endPos = sourcePositions.getEndPosition(cut, tree);
+                    if (endPos == (-1)) {
+                        switch (tree.getKind()) {
+                            case ASSIGNMENT:
+                                if (getCurrentPath().getLeaf().getKind() == Kind.ANNOTATION) {
+                                    ExpressionTree value = ((AssignmentTree) tree).getExpression();
+                                    startPos = sourcePositions.getStartPosition(cut, value);
+                                    endPos = sourcePositions.getEndPosition(cut, value);
+                                }
+                                break;
+                        }
                     }
-                    if (sourcePositions.getStartPosition(getCurrentPath().getCompilationUnit(), tree) < pos && endPos >= pos) {
+                    if (startPos < pos && endPos >= pos) {
                         if (tree.getKind() == Tree.Kind.ERRONEOUS) {
                             tree.accept(this, p);
                             throw new Result(getCurrentPath());
@@ -431,8 +507,16 @@ public final class TreeUtilities {
             path = result.path;
         }
         
-        if (path.getLeaf() == path.getCompilationUnit())
+        if (path.getLeaf() == path.getCompilationUnit()) {
+            long endPos = sourcePositions.getEndPosition(path.getCompilationUnit(), path.getCompilationUnit());
+            if (pos > endPos) {
+                List<? extends Tree> classes = path.getCompilationUnit().getTypeDecls();
+                if (classes.size() == 1 && classes.get(0) instanceof JCClassDecl clazz && (clazz.mods.flags & Flags.IMPLICIT_CLASS) != 0) {
+                    return new TreePath(path, clazz);
+                }
+            }
             return path;
+        }
         
         TokenSequence<JavaTokenId> tokenList = tokensFor(path.getLeaf(), sourcePositions, pos);
         tokenList.moveEnd();
@@ -537,14 +621,15 @@ public final class TreeUtilities {
         }
         
         class PathFinder extends DocTreePathScanner<Void,TreePath> {
-            private int pos;
-            private DocSourcePositions sourcePositions;
+            private final int pos;
+            private final DocSourcePositions sourcePositions;
             
             private PathFinder(int pos, DocSourcePositions sourcePositions) {
                 this.pos = pos;
                 this.sourcePositions = sourcePositions;
             }
             
+            @Override
             public Void scan(DocTree tree, TreePath p) {
                 if (tree != null) {
                     if (sourcePositions.getStartPosition(p.getCompilationUnit(), getCurrentPath().getDocComment(), tree) < pos && sourcePositions.getEndPosition(p.getCompilationUnit(), getCurrentPath().getDocComment(), tree) >= pos) {
@@ -612,6 +697,26 @@ public final class TreeUtilities {
             return info.impl.getJavacTask().parseType(expr, scope);
         } finally {
             jcMaker.pos = oldPos;
+        }
+    }
+
+    /**Parses given type in given context.
+     *
+     * @param expr type specification
+     * @param scope in which simple names should be resolved
+     * @return parsed {@link TypeMirror} or null if the given specification cannot be parsed
+     * @since 2.84
+     */
+    public TypeMirror parseType(String expr, Scope scope) {
+        Env<AttrContext> env = getEnv(scope);
+        if (scope instanceof NBScope && ((NBScope)scope).areAccessibilityChecksDisabled()) {
+            NBResolve.instance(info.impl.getJavacTask().getContext()).disableAccessibilityChecks();
+        }
+        try {
+            Tree type = parseType(expr);
+            return attributeTree(info.impl.getJavacTask(), env.toplevel, (JCTree) type, scope, true, new ArrayList<>());
+        } finally {
+            NBResolve.instance(info.impl.getJavacTask().getContext()).restoreAccessbilityChecks();
         }
     }
 
@@ -695,19 +800,14 @@ public final class TreeUtilities {
             Context context = task.getContext();
             JavaCompiler compiler = JavaCompiler.instance(context);
             JavaFileObject prev = compiler.log.useSource(new DummyJFO());
-            Log.DiagnosticHandler discardHandler = new Log.DiscardDiagnosticHandler(compiler.log) {
-                @Override
-                public void report(JCDiagnostic diag) {
-                    //ignore:
-                }            
-            };
+            Log.DiagnosticHandler discardHandler = compiler.log.new DiscardDiagnosticHandler();
             try {
                 CharBuffer buf = CharBuffer.wrap((text+"\u0000").toCharArray(), 0, text.length());
                 ParserFactory factory = ParserFactory.instance(context);
                 Parser parser = factory.newParser(buf, false, true, false, false);
-                if (parser instanceof JavacParser) {
+                if (parser instanceof JavacParser javacParser) {
                     if (sourcePositions != null)
-                        sourcePositions[0] = new ParserSourcePositions((JavacParser)parser, offset);
+                        sourcePositions[0] = new ParserSourcePositions(javacParser, offset);
                     return actualParse.apply(parser);
                 }
                 return null;
@@ -742,10 +842,12 @@ public final class TreeUtilities {
             this.offset = offset;
         }
 
+        @Override
         public long getStartPosition(CompilationUnitTree file, Tree tree) {
             return parser.getStartPos((JCTree)tree) - offset;
         }
 
+        @Override
         public long getEndPosition(CompilationUnitTree file, Tree tree) {
             return parser.getEndPos((JCTree)tree) - offset;
         }
@@ -821,12 +923,12 @@ public final class TreeUtilities {
     }
 
     private static Env<AttrContext> getEnv(Scope scope) {
-        if (scope instanceof NBScope) {
-            scope = ((NBScope) scope).delegate;
+        if (scope instanceof NBScope nbScope) {
+            scope = nbScope.delegate;
         }
         
-        if (scope instanceof HackScope) {
-            return ((HackScope) scope).getEnv();
+        if (scope instanceof HackScope hackScope) {
+            return hackScope.getEnv();
         }
 
         return ((JavacScope) scope).getEnv();
@@ -840,7 +942,7 @@ public final class TreeUtilities {
             NBResolve.instance(info.impl.getJavacTask().getContext()).disableAccessibilityChecks();
         }
         try {
-            return attributeTree(info.impl.getJavacTask(), env.toplevel, (JCTree) tree, scope, new ArrayList<>());
+            return attributeTree(info.impl.getJavacTask(), env.toplevel, (JCTree) tree, scope, false, new ArrayList<>());
         } finally {
             NBResolve.instance(info.impl.getJavacTask().getContext()).restoreAccessbilityChecks();
         }
@@ -867,7 +969,7 @@ public final class TreeUtilities {
             NBResolve.instance(info.impl.getJavacTask().getContext()).disableAccessibilityChecks();
         }
         try {
-            return attributeTree(info.impl.getJavacTask(), env.toplevel, (JCTree)tree, scope, new ArrayList<>());
+            return attributeTree(info.impl.getJavacTask(), env.toplevel, (JCTree)tree, scope, false, new ArrayList<>());
         } finally {
             NBResolve.instance(info.impl.getJavacTask().getContext()).restoreAccessbilityChecks();
         }
@@ -886,12 +988,12 @@ public final class TreeUtilities {
     }
     
     //from org/netbeans/modules/java/hints/spiimpl/Utilities.java:
-    private static TypeMirror attributeTree(JavacTaskImpl jti, CompilationUnitTree cut, Tree tree, Scope scope, final List<Diagnostic<? extends JavaFileObject>> errors) {
+    private static TypeMirror attributeTree(JavacTaskImpl jti, CompilationUnitTree cut, Tree tree, Scope scope, boolean attributeAsType, final List<Diagnostic<? extends JavaFileObject>> errors) {
         Log log = Log.instance(jti.getContext());
         JavaFileObject prev = log.useSource(new DummyJFO());
-        Log.DiagnosticHandler discardHandler = new Log.DiscardDiagnosticHandler(log) {
+        Log.DiagnosticHandler discardHandler = log.new DiscardDiagnosticHandler() {
             @Override
-            public void report(JCDiagnostic diag) {
+            public void reportReady(JCDiagnostic diag) {
                 errors.add(diag);
             }            
         };
@@ -904,11 +1006,11 @@ public final class TreeUtilities {
         try {
             Attr attr = Attr.instance(jti.getContext());
             Env<AttrContext> env = getEnv(scope);
+            if (attributeAsType) {
+                return attr.attribType((JCTree) tree, env);
+            }
             if (tree instanceof JCExpression)
                 return attr.attribExpr((JCTree) tree,env, Type.noType);
-            if (env.tree != null && env.tree.getKind() == Kind.VARIABLE && !VARIABLE_CAN_OWN_VARIABLES) {
-                env = env.next;
-            }
             return attr.attribStat((JCTree) tree,env);
         } finally {
             unenter(jti.getContext(), (JCCompilationUnit) cut, (JCTree) tree);
@@ -929,24 +1031,12 @@ public final class TreeUtilities {
         }
     }
 
-    private static boolean VARIABLE_CAN_OWN_VARIABLES;
-    static {
-        boolean result;
-        try {
-            SourceVersion.valueOf("RELEASE_12");
-            result = true;
-        } catch (IllegalArgumentException ex) {
-            result = false;
-        }
-        VARIABLE_CAN_OWN_VARIABLES = result;
-    }
-
     private static Scope attributeTreeTo(JavacTaskImpl jti, CompilationUnitTree cut, Tree tree, Scope scope, Tree to, final List<Diagnostic<? extends JavaFileObject>> errors) {
         Log log = Log.instance(jti.getContext());
         JavaFileObject prev = log.useSource(new DummyJFO());
-        Log.DiagnosticHandler discardHandler = new Log.DiscardDiagnosticHandler(log) {
+        Log.DiagnosticHandler discardHandler = log.new DiscardDiagnosticHandler() {
             @Override
-            public void report(JCDiagnostic diag) {
+            public void reportReady(JCDiagnostic diag) {
                 errors.add(diag);
             }            
         };
@@ -1005,6 +1095,7 @@ public final class TreeUtilities {
      * @return true if {@code member} is accessible in {@code type}
      * @deprecated since 0.111, {@link Trees#isAccessible(Scope, Element, DeclaredType)} should be used instead.
      */
+    @Deprecated
     public boolean isAccessible(Scope scope, Element member, TypeMirror type) {
         return type instanceof DeclaredType ? info.getTrees().isAccessible(scope, member, (DeclaredType)type) : false;
     }
@@ -1067,7 +1158,7 @@ public final class TreeUtilities {
 
     /**Find span of the {@link ClassTree}'s body in the source.
      * Returns starting and ending offset of the body in the source code that was parsed
-     * (ie. {@link CompilationInfo.getText()}, which may differ from the positions in the source
+     * (ie. {@link CompilationInfo#getText()}, which may differ from the positions in the source
      * document if it has been already altered.
      * 
      * @param clazz class which body should be searched for
@@ -1105,7 +1196,7 @@ public final class TreeUtilities {
     
     /**Find span of the {@link ClassTree#getSimpleName()} identifier in the source.
      * Returns starting and ending offset of the name in the source code that was parsed
-     * (ie. {@link CompilationInfo.getText()}, which may differ from the positions in the source
+     * (ie. {@link CompilationInfo#getText()}, which may differ from the positions in the source
      * document if it has been already altered.
      * 
      * @param clazz class which name should be searched for
@@ -1113,12 +1204,12 @@ public final class TreeUtilities {
      * @since 0.25
      */
     public int[] findNameSpan(ClassTree clazz) {
-        return findNameSpan(clazz.getSimpleName().toString(), clazz, JavaTokenId.CLASS, JavaTokenId.INTERFACE, JavaTokenId.ENUM, JavaTokenId.AT, JavaTokenId.WHITESPACE, JavaTokenId.BLOCK_COMMENT, JavaTokenId.LINE_COMMENT, JavaTokenId.JAVADOC_COMMENT);
+        return findNameSpan(clazz.getSimpleName().toString(), clazz, SPAN_CLASS_TOKENS, SPAN_CLASS_IDENTIFIERS);
     }
     
     /**Find span of the {@link MethodTree#getName()} identifier in the source.
      * Returns starting and ending offset of the name in the source code that was parsed
-     * (ie. {@link CompilationInfo.getText()}, which may differ from the positions in the source
+     * (ie. {@link CompilationInfo#getText()}, which may differ from the positions in the source
      * document if it has been already altered.
      * 
      * @param method method which name should be searched for
@@ -1151,7 +1242,7 @@ public final class TreeUtilities {
     
     /**Find span of the {@link VariableTree#getName()} identifier in the source.
      * Returns starting and ending offset of the name in the source code that was parsed
-     * (ie. {@link CompilationInfo.getText()}, which may differ from the positions in the source
+     * (ie. {@link CompilationInfo#getText()}, which may differ from the positions in the source
      * document if it has been already altered.
      * 
      * @param var variable which name should be searched for
@@ -1164,7 +1255,7 @@ public final class TreeUtilities {
     
     /**Find span of the {@link LabeledStatementTree#getLabel()} identifier in the source.
      * Returns starting and ending offset of the name in the source code that was parsed
-     * (ie. {@link CompilationInfo.getText()}, which may differ from the positions in the source
+     * (ie. {@link CompilationInfo#getText()}, which may differ from the positions in the source
      * document if it has been already altered.
      * 
      * @param lst labeled statement which name should be searched for
@@ -1177,7 +1268,7 @@ public final class TreeUtilities {
     
     /**Find span of the {@link TypeParameterTree#getName()} identifier in the source.
      * Returns starting and ending offset of the name in the source code that was parsed
-     * (ie. {@link CompilationInfo.getText()}, which may differ from the positions in the source
+     * (ie. {@link CompilationInfo#getText()}, which may differ from the positions in the source
      * document if it has been already altered.
      * 
      * @param tpt type parameter which name should be searched for
@@ -1190,7 +1281,7 @@ public final class TreeUtilities {
     
     /**Find span of the {@link LabeledStatementTree#getLabel()} identifier in the source.
      * Returns starting and ending offset of the name in the source code that was parsed
-     * (ie. {@link CompilationInfo.getText()}, which may differ from the positions in the source
+     * (ie. {@link CompilationInfo#getText()}, which may differ from the positions in the source
      * document if it has been already altered.
      * 
      * @param brk labeled statement which name should be searched for
@@ -1203,7 +1294,7 @@ public final class TreeUtilities {
     
     /**Find span of the {@link LabeledStatementTree#getLabel()} identifier in the source.
      * Returns starting and ending offset of the name in the source code that was parsed
-     * (ie. {@link CompilationInfo.getText()}, which may differ from the positions in the source
+     * (ie. {@link CompilationInfo#getText()}, which may differ from the positions in the source
      * document if it has been already altered.
      * 
      * @param cont labeled statement which name should be searched for
@@ -1216,7 +1307,7 @@ public final class TreeUtilities {
     
     /**Find span of the {@link MethodTree#getParameters()} parameter list in the source.
      * Returns the position of the opening and closing parentheses of the parameter list
-     * in the source code that was parsed (ie. {@link CompilationInfo.getText()}, which
+     * in the source code that was parsed (ie. {@link CompilationInfo#getText()}, which
      * may differ from the positions in the source document if it has been already altered.
      * 
      * @param method method which parameter list should be searched for
@@ -1260,7 +1351,7 @@ public final class TreeUtilities {
     
     /**Find span of the {@link MemberSelectTree#getIdentifier()} identifier in the source.
      * Returns starting and ending offset of the name in the source code that was parsed
-     * (ie. {@link CompilationInfo.getText()}, which may differ from the positions in the source
+     * (ie. {@link CompilationInfo#getText()}, which may differ from the positions in the source
      * document if it has been already altered.
      * 
      * @param mst member select which identifier should be searched for
@@ -1268,12 +1359,12 @@ public final class TreeUtilities {
      * @since 0.25
      */
     public int[] findNameSpan(MemberSelectTree mst) {
-        return findNameSpan(mst.getIdentifier().toString(), mst, JavaTokenId.DOT, JavaTokenId.WHITESPACE, JavaTokenId.BLOCK_COMMENT, JavaTokenId.LINE_COMMENT, JavaTokenId.JAVADOC_COMMENT);
+        return findNameSpan(mst.getIdentifier().toString(), mst, SPAN_COMMENT_TOKENS, Set.of());
     }
     
     /**Find span of the {@link MemberReferenceTree#getName()} identifier in the source.
      * Returns starting and ending offset of the name in the source code that was parsed
-     * (ie. {@link CompilationInfo.getText()}, which may differ from the positions in the source
+     * (ie. {@link CompilationInfo#getText()}, which may differ from the positions in the source
      * document if it has been already altered.
      * 
      * @param mst member reference for which the identifier should be searched for
@@ -1281,12 +1372,12 @@ public final class TreeUtilities {
      * @since 0.124
      */
     public int[] findNameSpan(MemberReferenceTree mst) {
-        return findNameSpan(mst.getName().toString(), mst, JavaTokenId.DOT, JavaTokenId.WHITESPACE, JavaTokenId.BLOCK_COMMENT, JavaTokenId.LINE_COMMENT, JavaTokenId.JAVADOC_COMMENT);
+        return findNameSpan(mst.getName().toString(), mst, SPAN_COMMENT_TOKENS, Set.of());
     }
     
     /**Find span of the name in the DocTree's reference tree (see {@link #getReferenceName(com.sun.source.util.DocTreePath)}
      * identifier in the source. Returns starting and ending offset of the name in
-     * the source code that was parsed (ie. {@link CompilationInfo.getText()}, which
+     * the source code that was parsed (ie. {@link CompilationInfo#getText()}, which
      * may differ from the positions in the source document if it has been already
      * altered.
      * 
@@ -1310,7 +1401,11 @@ public final class TreeUtilities {
         
         tokenSequence.move(pos);
         
-        if (!tokenSequence.moveNext() || tokenSequence.token().id() != JavaTokenId.JAVADOC_COMMENT) return null;
+        if (!tokenSequence.moveNext() ||
+            (tokenSequence.token().id() != JavaTokenId.JAVADOC_COMMENT &&
+             tokenSequence.token().id() != JavaTokenId.JAVADOC_COMMENT_LINE_RUN)) {
+            return null;
+        }
         
         TokenSequence<JavadocTokenId> jdocTS = tokenSequence.embedded(JavadocTokenId.language());
         
@@ -1333,32 +1428,38 @@ public final class TreeUtilities {
         
         return null;
     }
-    
-    private int[] findNameSpan(String name, Tree t, JavaTokenId... allowedTokens) {
+
+    private int[] findNameSpan(String name, Tree tree) {
+        return findNameSpan(name, tree, Set.of(), Set.of());
+    }
+
+    @SuppressWarnings("NestedAssignment")
+    private int[] findNameSpan(String name, Tree tree, Set<JavaTokenId> allowedTokens, Set<String> allowedIdentifiers) {
         if (!SourceVersion.isIdentifier(name)) {
             //names like "<error>", etc.
             return null;
         }
         
-        JCTree jcTree = (JCTree) t;
+        JCTree jcTree = (JCTree) tree;
         int pos = jcTree.pos;
         
         if (pos < 0)
             return null;
         
-        Set<JavaTokenId> allowedTokensSet = EnumSet.noneOf(JavaTokenId.class);
-        
-        allowedTokensSet.addAll(Arrays.asList(allowedTokens));
-        
         TokenSequence<JavaTokenId> tokenSequence = info.getTokenHierarchy().tokenSequence(JavaTokenId.language());
-        
         tokenSequence.move(pos);
         
         boolean wasNext;
         
-        while ((wasNext = tokenSequence.moveNext()) && allowedTokensSet.contains(tokenSequence.token().id()))
-            ;
-        
+        while (wasNext = tokenSequence.moveNext()) {
+            Token<JavaTokenId> t = tokenSequence.token();
+            if (!allowedTokens.contains(t.id())
+                    && ((allowedIdentifiers.isEmpty() || t.id() != JavaTokenId.IDENTIFIER)
+                            || !allowedIdentifiers.contains(t.text().toString()))) {
+                break;
+            }
+        }
+
         if (wasNext) {
             if (tokenSequence.token().id() == JavaTokenId.IDENTIFIER) {
                 boolean nameMatches;
@@ -1492,23 +1593,23 @@ public final class TreeUtilities {
         }
     }
 
-    /**Decode escapes defined in: http://wikis.sun.com/display/mlvm/ProjectCoinProposal, 3.1-3.9.
+    /**Decode escapes defined in: https://openjdk.org/projects/coin, 3.1-3.9.
      * Must be a full token text, including possible #".
      *
      * @param text to decode
      * @return decoded escapes from the identifier
-     * @see http://wikis.sun.com/display/mlvm/ProjectCoinProposal
+     * @see <a href="https://openjdk.org/projects/coin">ProjectCoinProposal</a>
      * @since 0.56
      */
     public @NonNull CharSequence decodeIdentifier(@NonNull CharSequence text) {
         return decodeIdentifierInternal(text);
     }
 
-    /**Encode identifier using escapes defined in: http://wikis.sun.com/display/mlvm/ProjectCoinProposal, 3.1-3.9.
+    /**Encode identifier using escapes defined in: https://openjdk.org/projects/coin, 3.1-3.9.
      *
-     * @param text to encode
+     * @param ident to encode
      * @return encoded identifier, including #" if necessary
-     * @see http://wikis.sun.com/display/mlvm/ProjectCoinProposal
+     * @see <a href="https://openjdk.org/projects/coin">ProjectCoinProposal</a>
      * @since 0.56
      */
     public @NonNull CharSequence encodeIdentifier(@NonNull CharSequence ident) {
@@ -1587,33 +1688,24 @@ public final class TreeUtilities {
         }
     }
 
-    static Set<Character> EXOTIC_ESCAPE = new HashSet<Character>(
-            Arrays.<Character>asList('!', '#', '$', '%', '&', '(', ')', '*', '+', ',', '-',
-                                     ':', '=', '?', '@', '^', '_', '`', '{', '|', '}')
+    static final Set<Character> EXOTIC_ESCAPE = Set.of(
+            '!', '#', '$', '%', '&', '(', ')', '*', '+', ',', '-',
+            ':', '=', '?', '@', '^', '_', '`', '{', '|', '}'
     );
 
-    private static final Map<Character, Character> ESCAPE_UNENCODE;
-    private static final Map<Character, Character> ESCAPE_ENCODE;
+    private static final Map<Character, Character> ESCAPE_UNENCODE = Map.of(
+            'n', '\n',
+            't', '\t',
+            'b', '\b',
+            'r', '\r'
+    );
 
-    static {
-        Map<Character, Character> unencode = new HashMap<Character, Character>();
-
-        unencode.put('n', '\n');
-        unencode.put('t', '\t');
-        unencode.put('b', '\b');
-        unencode.put('r', '\r');
-
-        ESCAPE_UNENCODE = Collections.unmodifiableMap(unencode);
-
-        Map<Character, Character> encode = new HashMap<Character, Character>();
-
-        encode.put('\n', 'n');
-        encode.put('\t', 't');
-        encode.put('\b', 'b');
-        encode.put('\r', 'r');
-
-        ESCAPE_ENCODE = Collections.unmodifiableMap(encode);
-    }
+    private static final Map<Character, Character> ESCAPE_ENCODE = Map.of(
+            '\n', 'n',
+            '\t', 't',
+            '\b', 'b',
+            '\r', 'r'
+    );
 
     /**Returns new tree based on {@code original}, such that each visited subtree
      * that occurs as a key in {@code original2Translated} is replaced by the corresponding
@@ -1648,13 +1740,13 @@ public final class TreeUtilities {
         ImmutableTreeTranslator itt = new ImmutableTreeTranslator(info instanceof WorkingCopy ? (WorkingCopy)info : null) {
             private @NonNull Map<Tree, Tree> map = new HashMap<Tree, Tree>(original2Translated);
             @Override
-            public Tree translate(Tree tree) {
+            public Tree translate(Tree tree, Object p) {
                 Tree translated = map.remove(tree);
 
                 if (translated != null) {
-                    return translate(translated);
+                    return translate(translated, p);
                 } else {
-                    return super.translate(tree);
+                    return super.translate(tree, p);
                 }
             }
         };
@@ -1663,7 +1755,7 @@ public final class TreeUtilities {
 
         itt.attach(c, ia, tree2Tag);
 
-        return itt.translate(original);
+        return itt.translate(original, null);
     }
     
     /**Returns new tree based on {@code original}, such that each visited subtree
@@ -1724,7 +1816,7 @@ public final class TreeUtilities {
         }
 
         @Override
-        public void classEntered(ClassTree clazz) {}
+        public void classEntered(ClassTree clazz, boolean isAnonymous) {}
 
         @Override
         public void enterVisibleThroughClasses(ClassTree clazz) {}
@@ -1762,6 +1854,7 @@ public final class TreeUtilities {
             this.info = info;
         }
     
+        @Override
         public Void visitMethodInvocation(MethodInvocationTree node, Set<TypeMirror> p) {
             super.visitMethodInvocation(node, p);
             Element el = info.getTrees().getElement(getCurrentPath());
@@ -1770,6 +1863,7 @@ public final class TreeUtilities {
             return null;
         }
 
+        @Override
         public Void visitNewClass(NewClassTree node, Set<TypeMirror> p) {
             super.visitNewClass(node, p);
             Element el = info.getTrees().getElement(getCurrentPath());
@@ -1778,6 +1872,7 @@ public final class TreeUtilities {
             return null;
         }
 
+        @Override
         public Void visitThrow(ThrowTree node, Set<TypeMirror> p) {
             super.visitThrow(node, p);
             TypeMirror tm = info.getTrees().getTypeMirror(new TreePath(getCurrentPath(), node.getExpression()));
@@ -1790,6 +1885,7 @@ public final class TreeUtilities {
             return null;
         }
 
+        @Override
         public Void visitTry(TryTree node, Set<TypeMirror> p) {
             Set<TypeMirror> s = new LinkedHashSet<TypeMirror>();
             Trees trees = info.getTrees();
@@ -1834,6 +1930,7 @@ public final class TreeUtilities {
             return null;            
         }
 
+        @Override
         public Void visitMethod(MethodTree node, Set<TypeMirror> p) {
             Set<TypeMirror> s = new LinkedHashSet<TypeMirror>();
             scan(node.getBody(), s);
@@ -1862,8 +1959,8 @@ public final class TreeUtilities {
     
     private static class UnrelatedTypeMirrorSet extends AbstractSet<TypeMirror> {
 
-        private Types types;
-        private LinkedList<TypeMirror> list = new LinkedList<TypeMirror>();
+        private final Types types;
+        private final LinkedList<TypeMirror> list = new LinkedList<>();
 
         public UnrelatedTypeMirrorSet(Types types) {
             this.types = types;
@@ -2052,6 +2149,15 @@ public final class TreeUtilities {
             }
         }
         return false;
+    }
+
+    /**
+     * {@return {@code true} iff the given class is the implicit class in the compact source file.}
+     * @param tree class to check
+     * @since 2.82
+     */
+    public boolean isImplicitlyDeclaredClass(@NonNull ClassTree tree) {
+        return tree instanceof JCClassDecl clazz && (clazz.mods.flags & Flags.IMPLICIT_CLASS) != 0;
     }
 
     private static final class NBScope implements Scope {
