@@ -27,6 +27,7 @@ import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -36,9 +37,12 @@ import java.util.logging.LogRecord;
 import javax.lang.model.element.ElementKind;
 import javax.lang.model.element.TypeElement;
 import java.util.stream.Collectors;
+import javax.lang.model.SourceVersion;
 import junit.framework.Test;
+
 import static junit.framework.TestCase.assertFalse;
 import static junit.framework.TestCase.assertTrue;
+
 import org.netbeans.api.java.classpath.ClassPath;
 import org.netbeans.api.java.source.ClassIndex;
 import org.netbeans.api.java.source.ClassIndex.SearchKind;
@@ -48,14 +52,18 @@ import org.netbeans.api.java.source.ElementHandle;
 import org.netbeans.api.java.source.JavaSource;
 import org.netbeans.junit.NbTestSuite;
 import org.netbeans.modules.classfile.ClassFile;
-import org.netbeans.modules.java.source.NoJavacHelper;
 import org.netbeans.modules.java.source.indexing.CompileWorker.ParsingOutput;
 import org.netbeans.modules.java.source.indexing.JavaCustomIndexer.CompileTuple;
+import org.netbeans.modules.parsing.impl.indexing.errors.TaskCache;
 import org.netbeans.modules.parsing.spi.indexing.Context;
+import org.netbeans.modules.parsing.spi.indexing.ErrorsCache;
+import org.netbeans.modules.parsing.spi.indexing.ErrorsCache.ErrorKind;
+import org.netbeans.modules.parsing.spi.indexing.ErrorsCache.Range;
 import org.netbeans.spi.java.classpath.support.ClassPathSupport;
 import org.openide.filesystems.FileObject;
 import org.openide.filesystems.FileUtil;
 import org.openide.filesystems.URLMapper;
+import org.openide.util.Pair;
 
 /**
  *
@@ -87,8 +95,8 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test3.sig",
-                                                       "cache/s1/java/15/classes/test/Test4.sig")), createdFiles);
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test3.sig",
+                                                       "cache/s1/java/16/classes/test/Test4.sig")), createdFiles);
         result = runIndexing(Arrays.asList(compileTuple("test/Test4.java", "package test; public class Test4 { void t() { Undef undef; } }")),
                              Collections.emptyList());
 
@@ -109,7 +117,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test4.sig")), createdFiles);
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test4.sig")), createdFiles);
     }
 
     public void testRepair2() throws Exception {
@@ -125,7 +133,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test4.sig")), createdFiles);
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test4.sig")), createdFiles);
         //TODO: check file content!!!
     }
 
@@ -142,7 +150,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test4.sig")), createdFiles);
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test4.sig")), createdFiles);
         //TODO: check file content!!!
     }
 
@@ -159,7 +167,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test4.sig")), createdFiles);
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test4.sig")), createdFiles);
         //TODO: check file content!!!
     }
 
@@ -176,8 +184,8 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test4.sig",
-                                                       "cache/s1/java/15/classes/test/Test4$1.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test4.sig",
+                                                       "cache/s1/java/16/classes/test/Test4$1.sig")),
                      createdFiles);
         //TODO: check file content!!!
     }
@@ -195,8 +203,8 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test4.sig",
-                                                       "cache/s1/java/15/classes/test/Test4$1.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test4.sig",
+                                                       "cache/s1/java/16/classes/test/Test4$1.sig")),
                      createdFiles);
         //TODO: check file content!!!
     }
@@ -214,7 +222,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test4.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test4.sig")),
                      createdFiles);
         //TODO: check file content!!!
     }
@@ -232,7 +240,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test4.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test4.sig")),
                      createdFiles);
         //TODO: check file content!!!
     }
@@ -253,7 +261,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
     }
 
@@ -273,9 +281,9 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test1.sig",
-                                                       "cache/s1/java/15/classes/test/Test2.sig",
-                                                       "cache/s1/java/15/classes/test/Test3.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test1.sig",
+                                                       "cache/s1/java/16/classes/test/Test2.sig",
+                                                       "cache/s1/java/16/classes/test/Test3.sig")),
                      createdFiles);
     }
 
@@ -292,7 +300,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test4.sig")), createdFiles);
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test4.sig")), createdFiles);
         //TODO: check file content!!!
     }
 
@@ -309,7 +317,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test4.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test4.sig")),
                      createdFiles);
         //TODO: check file content!!!
     }
@@ -330,7 +338,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test4.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test4.sig")),
                      createdFiles);
         //TODO: check file content!!!
     }
@@ -350,7 +358,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test4.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test4.sig")),
                      createdFiles);
         //TODO: check file content!!!
     }
@@ -368,7 +376,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test4.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test4.sig")),
                      createdFiles);
         //TODO: check file content!!!
     }
@@ -386,7 +394,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test4.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test4.sig")),
                      createdFiles);
         //TODO: check file content!!!
     }
@@ -404,7 +412,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/java/lang/Object.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/java/lang/Object.sig")),
                      createdFiles);
         //TODO: check file content!!!
     }
@@ -423,7 +431,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test4.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test4.sig")),
                      createdFiles);
         //TODO: check file content!!!
     }
@@ -443,8 +451,8 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Additional.sig",
-                                                       "cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Additional.sig",
+                                                       "cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         //TODO: check file content!!!
     }
@@ -478,32 +486,32 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.put(getWorkDir().toURI().relativize(created.toURI()).getPath(), created);
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/AnnUse.sig",
-                                                       "cache/s1/java/15/classes/test/FirstAnnBroken.sig",
-                                                       "cache/s1/java/15/classes/test/FirstTwoAnnBroken.sig",
-                                                       "cache/s1/java/15/classes/test/FirstAnnOK.sig",
-                                                       "cache/s1/java/15/classes/test/Ann1.sig",
-                                                       "cache/s1/java/15/classes/test/Ann2.sig",
-                                                       "cache/s1/java/15/classes/test/Ann3.sig",
-                                                       "cache/s1/java/15/classes/test/Ann4.sig",
-                                                       "cache/s1/java/15/classes/test/Ann5.sig",
-                                                       "cache/s1/java/15/classes/test/Ann6.sig",
-                                                       "cache/s1/java/15/classes/test/AnnExtra.sig",
-                                                       "cache/s1/java/15/classes/test/EnumExtra.sig",
-                                                       "cache/s1/java/15/classes/test/MiddleBroken.sig",
-                                                       "cache/s1/java/15/classes/test/WrongType.sig",
-                                                       "cache/s1/java/15/classes/test/Additional.sig",
-                                                       "cache/s1/java/15/classes/test/WrongDefault.sig",
-                                                       "cache/s1/java/15/classes/test/ManyWrongTrailing.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/AnnUse.sig",
+                                                       "cache/s1/java/16/classes/test/FirstAnnBroken.sig",
+                                                       "cache/s1/java/16/classes/test/FirstTwoAnnBroken.sig",
+                                                       "cache/s1/java/16/classes/test/FirstAnnOK.sig",
+                                                       "cache/s1/java/16/classes/test/Ann1.sig",
+                                                       "cache/s1/java/16/classes/test/Ann2.sig",
+                                                       "cache/s1/java/16/classes/test/Ann3.sig",
+                                                       "cache/s1/java/16/classes/test/Ann4.sig",
+                                                       "cache/s1/java/16/classes/test/Ann5.sig",
+                                                       "cache/s1/java/16/classes/test/Ann6.sig",
+                                                       "cache/s1/java/16/classes/test/AnnExtra.sig",
+                                                       "cache/s1/java/16/classes/test/EnumExtra.sig",
+                                                       "cache/s1/java/16/classes/test/MiddleBroken.sig",
+                                                       "cache/s1/java/16/classes/test/WrongType.sig",
+                                                       "cache/s1/java/16/classes/test/Additional.sig",
+                                                       "cache/s1/java/16/classes/test/WrongDefault.sig",
+                                                       "cache/s1/java/16/classes/test/ManyWrongTrailing.sig")),
                      createdFiles.keySet());
         assertAnnotations("@test.Ann5 runtimeVisible=false",
-                          createdFiles.get("cache/s1/java/15/classes/test/FirstAnnBroken.sig"));
+                          createdFiles.get("cache/s1/java/16/classes/test/FirstAnnBroken.sig"));
         assertAnnotations("@test.Ann5 runtimeVisible=false",
-                          createdFiles.get("cache/s1/java/15/classes/test/FirstTwoAnnBroken.sig"));
+                          createdFiles.get("cache/s1/java/16/classes/test/FirstTwoAnnBroken.sig"));
         assertAnnotations("@test.Ann5 runtimeVisible=false",
-                          createdFiles.get("cache/s1/java/15/classes/test/FirstAnnOK.sig"));
+                          createdFiles.get("cache/s1/java/16/classes/test/FirstAnnOK.sig"));
         assertAnnotations("@test.Ann5 runtimeVisible=false, @test.Ann6 runtimeVisible=false",
-                          createdFiles.get("cache/s1/java/15/classes/test/MiddleBroken.sig"));
+                          createdFiles.get("cache/s1/java/16/classes/test/MiddleBroken.sig"));
     }
 
     private static void assertAnnotations(String expected, File classfile) throws IOException {
@@ -525,7 +533,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/package-info.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/package-info.sig")),
                      createdFiles);
         //TODO: check file content!!!
     }
@@ -543,8 +551,8 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig",
-                                                            "cache/s1/java/15/classes/test/Test$1.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig",
+                                                            "cache/s1/java/16/classes/test/Test$1.sig")),
                      createdFiles);
         ClasspathInfo cpInfo = ClasspathInfo.create(ClassPath.EMPTY, ClassPath.EMPTY, ClassPathSupport.createClassPath(getRoot()));
         Set<ElementHandle<TypeElement>> classIndexResult = cpInfo.getClassIndex().getElements(ElementHandle.createTypeElementHandle(ElementKind.ENUM, "test.Test"), EnumSet.of(SearchKind.IMPLEMENTORS), EnumSet.of(ClassIndex.SearchScope.SOURCE));
@@ -572,11 +580,11 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig",
-                                                            "cache/s1/java/15/classes/test/Test$1.sig",
-                                                            "cache/s1/java/15/classes/test/Test$2.sig",
-                                                            "cache/s1/java/15/classes/test/Test$3.sig",
-                                                            "cache/s1/java/15/classes/test/Test$4.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig",
+                                                            "cache/s1/java/16/classes/test/Test$1.sig",
+                                                            "cache/s1/java/16/classes/test/Test$2.sig",
+                                                            "cache/s1/java/16/classes/test/Test$3.sig",
+                                                            "cache/s1/java/16/classes/test/Test$4.sig")),
                      createdFiles);
         ClasspathInfo cpInfo = ClasspathInfo.create(ClassPath.EMPTY, ClassPath.EMPTY, ClassPathSupport.createClassPath(getRoot()));
         Set<ElementHandle<TypeElement>> classIndexResult = cpInfo.getClassIndex().getElements(ElementHandle.createTypeElementHandle(ElementKind.INTERFACE, "java.lang.Runnable"), EnumSet.of(SearchKind.IMPLEMENTORS), EnumSet.of(ClassIndex.SearchScope.SOURCE));
@@ -611,7 +619,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
     }
 
@@ -636,9 +644,9 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig",
-                                                       "cache/s1/java/15/classes/test/Test$Inner.sig",
-                                                       "cache/s1/java/15/classes/test/Test$1.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig",
+                                                       "cache/s1/java/16/classes/test/Test$Inner.sig",
+                                                       "cache/s1/java/16/classes/test/Test$1.sig")),
                      createdFiles);
     }
 
@@ -668,7 +676,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -683,6 +691,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        System.err.println(\"Hello, world!\");\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -712,7 +721,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -727,6 +736,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        throw new java.lang.RuntimeException(\"Uncompilable code - compiler.err.cant.resolve.location\");\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -761,7 +771,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -790,6 +800,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "    private int F5a;\n" +
                 "    private int F5b;\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -818,7 +829,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -832,6 +843,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        throw new java.lang.RuntimeException(\"Uncompilable code\");\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -863,7 +875,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -881,6 +893,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        throw new java.lang.RuntimeException(\"Uncompilable code\");\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -912,7 +925,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -930,6 +943,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        throw new java.lang.RuntimeException(\"Uncompilable code\");\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -962,7 +976,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -981,6 +995,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        throw new java.lang.RuntimeException(\"Uncompilable code\");\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -1013,7 +1028,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -1035,6 +1050,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        throw new java.lang.RuntimeException(\"Uncompilable code\");\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -1076,9 +1092,9 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test$1.sig",
-                                                       "cache/s1/java/15/classes/test/Test$1$1.sig",
-                                                       "cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test$1.sig",
+                                                       "cache/s1/java/16/classes/test/Test$1$1.sig",
+                                                       "cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -1115,6 +1131,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        };\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -1145,7 +1162,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -1163,6 +1180,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        super();\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -1198,9 +1216,9 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test$1.sig",
-                                                       "cache/s1/java/15/classes/test/Test$N.sig",
-                                                       "cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test$1.sig",
+                                                       "cache/s1/java/16/classes/test/Test$N.sig",
+                                                       "cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -1237,6 +1255,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        }\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -1268,7 +1287,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -1283,6 +1302,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        throw new java.lang.RuntimeException(\"Uncompilable code - compiler.err.cant.apply.symbol\");\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -1316,7 +1336,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -1334,6 +1354,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        throw new java.lang.RuntimeException(\"Uncompilable code\");\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -1368,9 +1389,9 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test$1.sig",
-                                                       "cache/s1/java/15/classes/test/Test$Prop.sig",
-                                                       "cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test$1.sig",
+                                                       "cache/s1/java/16/classes/test/Test$Prop.sig",
+                                                       "cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -1382,6 +1403,9 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "    \n" +
                 "    void $$anonymousClasses() {\n" +
                 "        new Prop(0){\n" +
+                "            static {\n" +
+                "                throw new java.lang.RuntimeException(\"Uncompilable code\");\n" +
+                "            }\n" +
                 "            \n" +
                 "            (int i) {\n" +
                 "                throw new java.lang.RuntimeException(\"Uncompilable code\");\n" +
@@ -1407,6 +1431,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        }\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -1440,8 +1465,8 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test$T.sig",
-                                                       "cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test$T.sig",
+                                                       "cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -1466,6 +1491,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        }\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -1519,11 +1545,11 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test$1.sig",
-                                                       "cache/s1/java/15/classes/test/Test$N.sig",
-                                                       "cache/s1/java/15/classes/test/Test$1$1.sig",
-                                                       "cache/s1/java/15/classes/test/Test$1$2.sig",
-                                                       "cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test$1.sig",
+                                                       "cache/s1/java/16/classes/test/Test$N.sig",
+                                                       "cache/s1/java/16/classes/test/Test$1$1.sig",
+                                                       "cache/s1/java/16/classes/test/Test$1$2.sig",
+                                                       "cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -1585,6 +1611,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        }\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -1621,11 +1648,11 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test$1.sig",
-                                                       "cache/s1/java/15/classes/test/Test$2.sig",
-                                                       "cache/s1/java/15/classes/test/Test$2$1.sig",
-                                                       "cache/s1/java/15/classes/test/Test$1$1.sig",
-                                                       "cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test$1.sig",
+                                                       "cache/s1/java/16/classes/test/Test$2.sig",
+                                                       "cache/s1/java/16/classes/test/Test$2$1.sig",
+                                                       "cache/s1/java/16/classes/test/Test$1$1.sig",
+                                                       "cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -1685,6 +1712,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        throw new java.lang.RuntimeException(\"Uncompilable code - compiler.err.cant.resolve.location.args\");\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -1724,9 +1752,9 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test$1.sig",
-                                                       "cache/s1/java/15/classes/test/Test$N.sig",
-                                                       "cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test$1.sig",
+                                                       "cache/s1/java/16/classes/test/Test$N.sig",
+                                                       "cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -1758,6 +1786,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        }\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -1789,7 +1818,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -1801,6 +1830,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "    }\n" +
                 "    Test t;\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -1841,9 +1871,9 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/SuperIntf.sig",
-                                                       "cache/s1/java/15/classes/test/SuperClass.sig",
-                                                       "cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/SuperIntf.sig",
+                                                       "cache/s1/java/16/classes/test/SuperClass.sig",
+                                                       "cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -1873,6 +1903,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "    public default void test2() {\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
     }
 
@@ -1904,7 +1935,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
             createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
         }
 
-        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/15/classes/test/Test.sig")),
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
                      createdFiles);
         Map<String, String> expected = Collections.singletonMap("test/Test.java",
                 "package test;\n" +
@@ -1918,7 +1949,566 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
                 "        System.err.println();\n" +
                 "    }\n" +
                 "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
         assertEquals(expected, file2Fixed);
+    }
+
+    public void testRecordPatterns() throws Exception {
+        setSourceLevel(SourceVersion.latest().name().substring("RELEASE_".length()));
+        setCompilerOptions(Arrays.asList("--enable-preview"));
+        ParsingOutput result = runIndexing(Arrays.asList(compileTuple("test/Test.java", "package test;\n"
+                        + "record Rect(ColoredPoint upperLeft) {}\n"
+                        + "record ColoredPoint(Point p) {}\n"
+                        + "record Point(int x){}\n"
+                        + "public class Test {\n"
+                        + "    private void test(Object o) {\n"
+                        + "        if (o instanceof Rect(ColoredPoint(Point p) ul)) {\n"
+                        + "            int x = p.x();\n"
+                        + "            System.out.println(\"Hello\");\n"
+                        + "        }\n"
+                        + "    }\n"
+                        + "}\n")), Arrays.asList());
+
+        assertFalse(result.lowMemory);
+        assertTrue(result.success);
+
+        Set<String> createdFiles = new HashSet<String>();
+
+        for (File created : result.createdFiles) {
+            createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
+        }
+
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Rect.sig",
+                                                       "cache/s1/java/16/classes/test/ColoredPoint.sig",
+                                                       "cache/s1/java/16/classes/test/Point.sig",
+                                                       "cache/s1/java/16/classes/test/Test.sig")), createdFiles);
+    }
+
+    public void testEnhancedSwitch1() throws Exception {
+        setSourceLevel(SourceVersion.latest().name().substring("RELEASE_".length()));
+        setCompilerOptions(Arrays.asList("--enable-preview"));
+        ParsingOutput result = runIndexing(Arrays.asList(compileTuple("test/Test.java", "package test;\n"
+                        + "record Rect(ColoredPoint upperLeft) {}\n"
+                        + "record ColoredPoint(Point p) {}\n"
+                        + "record Point(int x){}\n"
+                        + "public class Test {\n"
+                        + "    private void test(Object o) {\n"
+                        + "        switch (o) {\n"
+                        + "            case Rect r: \n"
+                        + "                System.out.println(\"Hello\");\n"
+                        + "                break;\n"
+                        + "            default:\n"
+                        + "                break;\n"
+                        + "        }\n"
+                        + "    }\n"
+                        + "}\n")), Arrays.asList());
+
+        assertFalse(result.lowMemory);
+        assertTrue(result.success);
+
+        Set<String> createdFiles = new HashSet<String>();
+
+        for (File created : result.createdFiles) {
+            createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
+        }
+
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Rect.sig",
+                                                       "cache/s1/java/16/classes/test/ColoredPoint.sig",
+                                                       "cache/s1/java/16/classes/test/Point.sig",
+                                                       "cache/s1/java/16/classes/test/Test.sig")), createdFiles);
+    }
+
+    public void testEnhancedSwitch2() throws Exception {
+        setSourceLevel(SourceVersion.latest().name().substring("RELEASE_".length()));
+        setCompilerOptions(Arrays.asList("--enable-preview"));
+        ParsingOutput result = runIndexing(Arrays.asList(compileTuple("test/Test.java", "package test;\n"
+                        + "record Rect(ColoredPoint upperLeft) {}\n"
+                        + "record ColoredPoint(Point p) {}\n"
+                        + "record Point(int x){}\n"
+                        + "public class Test {\n"
+                        + "    private void test(Object o) {\n"
+                        + "        switch (o) {\n"
+                        + "            case null: \n"
+                        + "                System.out.println(\"Hello\");\n"
+                        + "                break;\n"
+                        + "            default:\n"
+                        + "                break;\n"
+                        + "        }\n"
+                        + "    }\n"
+                        + "}\n")), Arrays.asList());
+
+        assertFalse(result.lowMemory);
+        assertTrue(result.success);
+
+        Set<String> createdFiles = new HashSet<String>();
+
+        for (File created : result.createdFiles) {
+            createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
+        }
+
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Rect.sig",
+                                                       "cache/s1/java/16/classes/test/ColoredPoint.sig",
+                                                       "cache/s1/java/16/classes/test/Point.sig",
+                                                       "cache/s1/java/16/classes/test/Test.sig")), createdFiles);
+    }
+
+    public void testEnhancedSwitch3() throws Exception {
+        setSourceLevel(SourceVersion.latest().name().substring("RELEASE_".length()));
+        setCompilerOptions(Arrays.asList("--enable-preview"));
+        ParsingOutput result = runIndexing(Arrays.asList(compileTuple("test/Test.java", "package test;\n"
+                        + "record Rect(ColoredPoint upperLeft) {}\n"
+                        + "record ColoredPoint(Point p) {}\n"
+                        + "record Point(int x){}\n"
+                        + "public class Test {\n"
+                        + "    private void test(Object o) {\n"
+                        + "        switch (o) {\n"
+                        + "            case (String s): \n"
+                        + "                System.out.println(\"Hello\");\n"
+                        + "                break;\n"
+                        + "            default:\n"
+                        + "                break;\n"
+                        + "        }\n"
+                        + "    }\n"
+                        + "}\n")), Arrays.asList());
+
+        assertFalse(result.lowMemory);
+        assertTrue(result.success);
+
+        Set<String> createdFiles = new HashSet<String>();
+
+        for (File created : result.createdFiles) {
+            createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
+        }
+
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Rect.sig",
+                                                       "cache/s1/java/16/classes/test/ColoredPoint.sig",
+                                                       "cache/s1/java/16/classes/test/Point.sig",
+                                                       "cache/s1/java/16/classes/test/Test.sig")), createdFiles);
+    }
+
+    public void testRecordErroneousComponent() throws Exception {
+        setSourceLevel(SourceVersion.latest().name().substring("RELEASE_".length()));
+
+        ParsingOutput result = runIndexing(Arrays.asList(compileTuple("test/Test.java",
+                                                                      "package test;\n" +
+                                                                      "public record Test(Unknown unknown) {\n" +
+                                                                      "}\n")),
+                                           Arrays.asList());
+
+        assertFalse(result.lowMemory);
+        assertTrue(result.success);
+
+        Set<String> createdFiles = new HashSet<String>();
+
+        for (File created : result.createdFiles) {
+            createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
+        }
+
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
+                     createdFiles);
+    }
+
+    public void testMethodWithErroneousInMemberRef() throws Exception {
+        Map<String, String> file2Fixed = new HashMap<>();
+        VanillaCompileWorker.fixedListener = (file, cut) -> {
+            try {
+                FileObject source = URLMapper.findFileObject(file.toUri().toURL());
+                file2Fixed.put(FileUtil.getRelativePath(getRoot(), source), cut.toString());
+            } catch (MalformedURLException ex) {
+                throw new IllegalStateException(ex);
+            }
+        };
+        ParsingOutput result = runIndexing(Arrays.asList(compileTuple("test/Test.java",
+                                                                      "package test;\n" +
+                                                                      "public class Test {\n" +
+                                                                      "    public void testA() {\n" +
+                                                                      "        r().map(this::test1);\n" +
+                                                                      "    }\n" +
+                                                                      "    public void testB() {\n" +
+                                                                      "        r().map(x -> test1(x));\n" +
+                                                                      "    }\n" +
+                                                                      "    public Object test1(Unknown u) {\n" +
+                                                                      "        return null;\n" +
+                                                                      "    }\n" +
+                                                                      "    public static void doTest(I i) {\n" +
+                                                                      "    }\n" +
+                                                                      "    private static java.util.Optional<Unknown> r() {\n" +
+                                                                      "        return null;\n" +
+                                                                      "    }\n" +
+                                                                      "}\n" +
+                                                                      "interface I {\n" +
+                                                                      "    public Object test(Object o);\n" +
+                                                                      "}\n")),
+                                           Arrays.asList());
+
+        assertFalse(result.lowMemory);
+        assertTrue(result.success);
+
+        Set<String> createdFiles = new HashSet<String>();
+
+        for (File created : result.createdFiles) {
+            createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
+        }
+
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/I.sig",
+                                                       "cache/s1/java/16/classes/test/Test.sig")),
+                     createdFiles);
+        Map<String, String> expected = Collections.singletonMap("test/Test.java",
+                "package test;\n" +
+                "\n" +
+                "public class Test {\n" +
+                "    static {\n" +
+                "        throw new java.lang.RuntimeException(\"Uncompilable code - compiler.err.cant.resolve.location\");\n" +
+                "    }\n" +
+                "    \n" +
+                "    public Test() {\n" +
+                "        super();\n" +
+                "    }\n" +
+                "    \n" +
+                "    public void testA() {\n" +
+                "        throw new java.lang.RuntimeException(\"Uncompilable code\");\n" +
+                "    }\n" +
+                "    \n" +
+                "    public void testB() {\n" +
+                "        throw new java.lang.RuntimeException(\"Uncompilable code\");\n" +
+                "    }\n" +
+                "    \n" +
+                "    public Object test1(Unknown u) {\n" +
+                "        return null;\n" +
+                "    }\n" +
+                "    \n" +
+                "    public static void doTest(I i) {\n" +
+                "    }\n" +
+                "    \n" +
+                "    private static java.util.Optional<Unknown> r() {\n" +
+                "        return null;\n" +
+                "    }\n" +
+                "}\n" +
+                "interface I {\n" +
+                "    \n" +
+                "    public Object test(Object o);\n" +
+                "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
+        assertEquals(expected, file2Fixed);
+    }
+
+    public void testComplexDesugaringSupertypes() throws Exception {
+        ParsingOutput result = runIndexing(Arrays.asList(compileTuple("test/Test4.java", "package test; public class Test4 extends extra.Extra { }")),
+                                           Arrays.asList(),
+                                           Arrays.asList(compileTuple("extra/Extra.java", "package extra; public class Extra { private void get() { Extra2.extra(); } }"),
+                                                         compileTuple("extra/Extra2.java", "package extra; public class Extra2 { private void get() { Unknown unknown; } }")));
+
+        assertFalse(result.lowMemory);
+        assertTrue(result.success);
+
+        Set<String> createdFiles = new HashSet<String>();
+
+        for (File created : result.createdFiles) {
+            createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
+        }
+
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test4.sig")),
+                     createdFiles);
+        //TODO: check file content!!!
+    }
+
+    public void testPatternSwitch() throws Exception {
+        setSourceLevel("20");
+
+        Map<String, String> file2Fixed = new HashMap<>();
+        VanillaCompileWorker.fixedListener = (file, cut) -> {
+            try {
+                FileObject source = URLMapper.findFileObject(file.toUri().toURL());
+                file2Fixed.put(FileUtil.getRelativePath(getRoot(), source), cut.toString());
+            } catch (MalformedURLException ex) {
+                throw new IllegalStateException(ex);
+            }
+        };
+        ParsingOutput result = runIndexing(Arrays.asList(compileTuple("test/Test.java",
+                                                                      "package test;\n" +
+                                                                      "public class Test {\n" +
+                                                                      "    public void test1(Object o) {\n" +
+                                                                      "        switch (o) {\n" +
+                                                                      "            case String s -> {}\n" +
+                                                                      "            case Object oo -> {}\n" +
+                                                                      "        }\n" +
+                                                                      "    }\n" +
+                                                                      "    public void test2(Object o) {\n" +
+                                                                      "        switch (o) {\n" +
+                                                                      "            case String s -> {}\n" +
+                                                                      "            case Object oo -> {}\n" +
+                                                                      "        }\n" +
+                                                                      "    }\n" +
+                                                                      "}\n")),
+                                           Arrays.asList());
+
+        assertFalse(result.lowMemory);
+        assertTrue(result.success);
+
+        Set<String> createdFiles = new HashSet<String>();
+
+        for (File created : result.createdFiles) {
+            createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
+        }
+
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
+                     createdFiles);
+        Map<String, String> expected = Collections.singletonMap("test/Test.java",
+                "package test;\n" +
+                "\n" +
+                "public class Test {\n" +
+                "    \n" +
+                "    public Test() {\n" +
+                "        super();\n" +
+                "    }\n" +
+                "    \n" +
+                "    public void test1(Object o) {\n" +
+                "        throw new java.lang.RuntimeException(\"Uncompilable code - compiler.err.feature.not.supported.in.source.plural\");\n" +
+                "    }\n" +
+                "    \n" +
+                "    public void test2(Object o) {\n" +
+                "        throw new java.lang.RuntimeException(\"Uncompilable code\");\n" +
+                "    }\n" +
+                "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
+        assertEquals(expected, file2Fixed);
+    }
+
+    public void testTypeTest() throws Exception {
+        setSourceLevel("17");
+
+        Map<String, String> file2Fixed = new HashMap<>();
+        VanillaCompileWorker.fixedListener = (file, cut) -> {
+            try {
+                FileObject source = URLMapper.findFileObject(file.toUri().toURL());
+                file2Fixed.put(FileUtil.getRelativePath(getRoot(), source), cut.toString());
+            } catch (MalformedURLException ex) {
+                throw new IllegalStateException(ex);
+            }
+        };
+        ParsingOutput result = runIndexing(Arrays.asList(compileTuple("test/Test.java",
+                                                                      "package test;\n" +
+                                                                      "public class Test {\n" +
+                                                                      "    public void test1(Object o) {\n" +
+                                                                      "        if (o instanceof String s) {\n" +
+                                                                      "            System.err.println();\n" +
+                                                                      "        }\n" +
+                                                                      "    }\n" +
+                                                                      "}\n")),
+                                           Arrays.asList());
+
+        assertFalse(result.lowMemory);
+        assertTrue(result.success);
+
+        Set<String> createdFiles = new HashSet<String>();
+
+        for (File created : result.createdFiles) {
+            createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
+        }
+
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
+                     createdFiles);
+        Map<String, String> expected = Collections.singletonMap("test/Test.java",
+                "package test;\n" +
+                "\n" +
+                "public class Test {\n" +
+                "    \n" +
+                "    public Test() {\n" +
+                "        super();\n" +
+                "    }\n" +
+                "    \n" +
+                "    public void test1(Object o) {\n" +
+                "        if (o instanceof String s) {\n" +
+                "            System.err.println();\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
+        assertEquals(expected, file2Fixed);
+    }
+
+    public void testWrongRecordComponent() throws Exception {
+        setSourceLevel("17");
+
+        Map<String, String> file2Fixed = new HashMap<>();
+        VanillaCompileWorker.fixedListener = (file, cut) -> {
+            try {
+                FileObject source = URLMapper.findFileObject(file.toUri().toURL());
+                file2Fixed.put(FileUtil.getRelativePath(getRoot(), source), cut.toString());
+            } catch (MalformedURLException ex) {
+                throw new IllegalStateException(ex);
+            }
+        };
+        ParsingOutput result = runIndexing(Arrays.asList(compileTuple("test/Test.java",
+                                                                      "package test;\n" +
+                                                                      "public record Test(int wait) {\n" +
+                                                                      "}\n")),
+                                           Arrays.asList());
+
+        assertFalse(result.lowMemory);
+        assertTrue(result.success);
+
+        Set<String> createdFiles = new HashSet<String>();
+
+        for (File created : result.createdFiles) {
+            createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
+        }
+
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")),
+                     createdFiles);
+        Map<String, String> expected = Collections.singletonMap("test/Test.java",
+                "package test;\n" +
+                "\n" +
+                "public class Test {\n" +
+                "    static {\n" +
+                "        throw new java.lang.RuntimeException(\"Uncompilable code - compiler.err.illegal.record.component.name\");\n" +
+                "    }\n" +
+                "    \n" +
+                "    public Test(int wait) {\n" +
+                "        super();\n" +
+                "    }\n" +
+                "    private final int wait;\n" +
+                "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
+        assertEquals(expected, file2Fixed);
+    }
+
+    public void testRecord1() throws Exception {
+        setSourceLevel("11");
+        Map<String, String> file2Fixed = new HashMap<>();
+        VanillaCompileWorker.fixedListener = (file, cut) -> {
+            try {
+                FileObject source = URLMapper.findFileObject(file.toUri().toURL());
+                file2Fixed.put(FileUtil.getRelativePath(getRoot(), source), cut.toString());
+            } catch (MalformedURLException ex) {
+                throw new IllegalStateException(ex);
+            }
+        };
+        ParsingOutput result = runIndexing(Arrays.asList(compileTuple("test/Test.java", "package test;\n"
+                        + "record Test(int i) {}\n")), Arrays.asList());
+
+        assertFalse(result.lowMemory);
+        assertTrue(result.success);
+
+        Set<String> createdFiles = new HashSet<String>();
+
+        for (File created : result.createdFiles) {
+            createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
+        }
+
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")), createdFiles);
+        Map<String, String> expected = Collections.singletonMap("test/Test.java",
+                "package test;\n" +
+                "\n" +
+                "class Test {\n" +
+                "    static {\n" +
+                "        throw new java.lang.RuntimeException(\"Uncompilable code - compiler.err.feature.not.supported.in.source.plural\");\n" +
+                "    }\n" +
+                "    \n" +
+                "    public final java.lang.String toString() {\n" +
+                "        throw new java.lang.RuntimeException(\"Uncompilable code - java.lang.runtime.ObjectMethods does not exist!\");\n" +
+                "    }\n" +
+                "    \n" +
+                "    public final int hashCode() {\n" +
+                "        throw new java.lang.RuntimeException(\"Uncompilable code - java.lang.runtime.ObjectMethods does not exist!\");\n" +
+                "    }\n" +
+                "    \n" +
+                "    public final boolean equals(java.lang.Object o) {\n" +
+                "        throw new java.lang.RuntimeException(\"Uncompilable code - java.lang.runtime.ObjectMethods does not exist!\");\n" +
+                "    }\n" +
+                "    \n" +
+                "    Test(int i) {\n" +
+                "        throw new java.lang.RuntimeException(\"Uncompilable code\");\n" +
+                "    }\n" +
+                "    private final int i;\n" +
+                "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
+        assertEquals(expected, file2Fixed);
+    }
+
+    public void testRecord2() throws Exception {
+        setSourceLevel("17");
+        Map<String, String> file2Fixed = new HashMap<>();
+        VanillaCompileWorker.fixedListener = (file, cut) -> {
+            try {
+                FileObject source = URLMapper.findFileObject(file.toUri().toURL());
+                file2Fixed.put(FileUtil.getRelativePath(getRoot(), source), cut.toString());
+            } catch (MalformedURLException ex) {
+                throw new IllegalStateException(ex);
+            }
+        };
+        ParsingOutput result = runIndexing(Arrays.asList(compileTuple("test/Test.java", "package test;\n"
+                        + "record Test(int i) {}\n")), Arrays.asList());
+
+        assertFalse(result.lowMemory);
+        assertTrue(result.success);
+
+        Set<String> createdFiles = new HashSet<String>();
+
+        for (File created : result.createdFiles) {
+            createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
+        }
+
+        assertEquals(new HashSet<String>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig")), createdFiles);
+        Map<String, String> expected = Collections.singletonMap("test/Test.java",
+                "package test;\n" +
+                "\n" +
+                "class Test {\n" +
+                "    \n" +
+                "    Test(int i) {\n" +
+                "        super();\n" +
+                "    }\n" +
+                "    private final int i;\n" +
+                "}");
+        if (!"\n".equals(System.lineSeparator())) file2Fixed.replaceAll((k, v) -> v.replaceAll(System.lineSeparator(), "\n"));
+        assertEquals(expected, file2Fixed);
+    }
+
+    public void testBrokenWarningEndPos() throws Exception { //NETBEANS-7981
+        setCompilerOptions(Arrays.asList("-Xlint:deprecation"));
+
+        String code = """
+                      package test;
+                      public class Test {
+                          void t() {
+                              new D() {};
+                          }
+                      }
+                      class D {
+                          @Deprecated
+                          D() {}
+                      }
+                      """;
+        ParsingOutput result = runIndexing(Arrays.asList(compileTuple("test/Test.java",
+                                                                      code)),
+                                           Arrays.asList());
+
+        assertFalse(result.lowMemory);
+        assertTrue(result.success);
+
+        Set<String> createdFiles = new HashSet<>();
+
+        for (File created : result.createdFiles) {
+            createdFiles.add(getWorkDir().toURI().relativize(created.toURI()).getPath());
+        }
+
+        assertEquals(new HashSet<>(Arrays.asList("cache/s1/java/16/classes/test/Test.sig",
+                                                       "cache/s1/java/16/classes/test/Test$1.sig",
+                                                       "cache/s1/java/16/classes/test/D.sig")),
+                     createdFiles);
+        record Data(ErrorKind kind, Pair<Pair<Integer, Integer>, Pair<Integer, Integer>> range) {}
+        List<Data> errors = TaskCache.getDefault().getErrors(getRoot().getFileObject("test/Test.java"), new ErrorsCache.ReverseConvertor<Data>() {
+            @Override
+            public Data get(ErrorKind kind, Range range, String message) {
+                return new Data(kind, Pair.of(Pair.of(range.start().line(),
+                                                      range.start().column()),
+                                              Pair.of(range.end().line(),
+                                                      range.end().column())));
+            }
+        });
+        assertEquals(List.of(new Data(ErrorKind.WARNING, Pair.of(Pair.of(4, 9), Pair.of(4, 19))),
+                             new Data(ErrorKind.WARNING, Pair.of(Pair.of(4, 17), Pair.of(4, 17)))),
+                     errors);
     }
 
     public static void noop() {}
@@ -1958,13 +2548,7 @@ public class VanillaCompileWorkerTest extends CompileWorkerTestBase {
     }
 
     public static Test suite() {
-        if (NoJavacHelper.hasNbJavac()) {
-            return new VanillaCompileWorkerTest("noop");
-        } else {
-//            return new VanillaCompileWorkerTest("testAnonymousClasses");
-//            return new VanillaCompileWorkerTest("testPreserveValidInitializers");
-            return new NbTestSuite(VanillaCompileWorkerTest.class);
-        }
+        return new NbTestSuite(VanillaCompileWorkerTest.class);
     }
 
     static {
