@@ -65,7 +65,7 @@ public final class Startup {
      */
     private static final boolean NO_CUSTOMIZATIONS = Boolean.getBoolean("netbeans.plaf.disable.ui.customizations"); //NOI18N
 
-    /** Constant for Nimbus L&F name */
+    /** Constant for Nimbus L&amp;F name */
     private static final String NIMBUS="Nimbus";
 
     /** Singleton instance */
@@ -158,8 +158,8 @@ public final class Startup {
           LookAndFeel lf = UIManager.getLookAndFeel();
           if (uiClass != lf.getClass()) {
               try {
-                lf = (LookAndFeel) uiClass.newInstance();
-              } catch (IllegalAccessException | InstantiationException ex) {
+                lf = (LookAndFeel) uiClass.getDeclaredConstructor().newInstance();
+              } catch (ReflectiveOperationException ex) {
                   return new LFInstanceOrName(uiClass.getName());
               }
           }
@@ -167,7 +167,7 @@ public final class Startup {
       }
     }
 
-    /** Default NetBeans logic for finding out the right L&F.
+    /** Default NetBeans logic for finding out the right L&amp;F.
      * @return name of the LaF to instantiate
      */
     private static String defaultLaF() {
@@ -181,20 +181,9 @@ public final class Startup {
         } else {
             //Should get us metal where it doesn't get us GTK
             uiClassName = UIManager.getSystemLookAndFeelClassName();
-            // Enable GTK L&F only for JDK version 1.6.0 update 1 and later.
-            // GTK L&F quality unacceptable for earlier versions.
-            // Also enable GTK L&F for OpenJDK
-            String javaVersion = System.getProperty("java.version");
-            if ("1.6.0_01".compareTo(javaVersion) > 0 && System.getProperty("java.vm.name") != null && System.getProperty("java.vm.name").indexOf("OpenJDK") < 0) {
-                // IDE runs on 1.5 or 1.6 - useGtk can enabled Gtk
-                if (uiClassName.indexOf("gtk") >= 0 && !Boolean.getBoolean("useGtk")) {
-                    uiClassName = "javax.swing.plaf.metal.MetalLookAndFeel";
-                }
-            } else {
-                // IDE runs on 1.6_0_01 or higher - useGtk can disabled Gtk
-                if (uiClassName.indexOf("gtk") >= 0 && System.getProperty("useGtk") != null && !Boolean.getBoolean("useGtk")) {
-                    uiClassName = "javax.swing.plaf.metal.MetalLookAndFeel";
-                }
+            // useGtk can disabled Gtk
+            if (uiClassName.indexOf("gtk") >= 0 && System.getProperty("useGtk") != null && !Boolean.getBoolean("useGtk")) {
+                uiClassName = "javax.swing.plaf.metal.MetalLookAndFeel";
             }
             // #118534 - don't allow Nimbus L&F as default system L&F,
             // as we're not ready to support it yet
@@ -240,12 +229,12 @@ public final class Startup {
         if (curCustoms != null) {
             Integer in = (Integer) UIManager.get(LFCustoms.CUSTOM_FONT_SIZE); //NOI18N
             if (in == null && UIManager.getLookAndFeel().getClass() == MetalLookAndFeel.class) {
-                in = new Integer (11);
+                in = 11;
             }
 
             //#161761: Do not want to use font size param for GTK L&F because it causes mixed font size
             if ((in != null) && !UIUtils.isGtkLF()) {
-                AllLFCustoms.initCustomFontSize (in.intValue());
+                AllLFCustoms.initCustomFontSize (in);
             }
             installLFCustoms (curCustoms);
             if (isLFChange) {
@@ -334,6 +323,9 @@ public final class Startup {
             defaults.putDefaults (customs.getLookAndFeelCustomizationKeysAndValues());
         }
 
+        if (defaults.getBoolean("windowDefaultLookAndFeelDecorated")) {
+            JFrame.setDefaultLookAndFeelDecorated(true);
+        }
     }
 
     private void runPostInstall() {
@@ -382,7 +374,7 @@ public final class Startup {
         }
         try {
             Class klazz = UIUtils.classForName( uiClassName );
-            Object inst = klazz.newInstance();
+            Object inst = klazz.getDeclaredConstructor().newInstance();
             if( inst instanceof LFCustoms )
                 return ( LFCustoms ) inst;
         } catch( ClassNotFoundException e ) {
@@ -414,7 +406,7 @@ public final class Startup {
                 return new GtkLFCustoms();
             } else {
                 try {
-                    return (LFCustoms) UIUtils.classForName(FORCED_CUSTOMS).newInstance();
+                    return (LFCustoms) UIUtils.classForName(FORCED_CUSTOMS).getDeclaredConstructor().newInstance();
                 } catch (Exception e) {
                     System.err.println("UI customizations class not found: " //NOI18N
                         + FORCED_CUSTOMS); //NOI18N
@@ -436,7 +428,7 @@ public final class Startup {
             buf.append("Nb."); //NOI18N
             buf.append(UIManager.getLookAndFeel().getID());
             if (UIUtils.isXPLF()) {
-                if (isWindows8() || isWindows10()) {
+                if (isWindows8() || isWindows10() || isWindows11()) {
                     buf.append("Windows8LFCustoms"); //NOI18N
                 } else if (isWindowsVista() || isWindows7()) {
                     buf.append("VistaLFCustoms"); //NOI18N
@@ -461,7 +453,7 @@ public final class Startup {
             switch (Arrays.asList(knownLFs).indexOf(UIManager.getLookAndFeel().getID())) {
                 case 1 :
                     if (UIUtils.isXPLF()) {
-                        if( isWindows8() || isWindows10() ) {
+                        if( isWindows8() || isWindows10() || isWindows11() ) {
                             result = new Windows8LFCustoms();
                         } else if (isWindowsVista() || isWindows7()) {
                             result = new VistaLFCustoms();
@@ -487,7 +479,7 @@ public final class Startup {
                 default :
                     // #79401 check if it's XP style LnF, for example jGoodies
                     if (UIUtils.isXPLF()) {
-                        if (isWindows8() || isWindows10()) {
+                        if (isWindows8() || isWindows10() || isWindows11()) {
                             result = new Windows8LFCustoms();
                         } else if (isWindowsVista() || isWindows7()) {
                             result = new VistaLFCustoms();
@@ -511,6 +503,13 @@ public final class Startup {
      * as setting up a custom font size and loading a theme. Basically delegates to
      * {@link #run(java.lang.Class, int, java.net.URL, java.util.ResourceBundle)} with null
      * resource bundle.
+     * @param uiClass The UI class which should be used for the look and feel
+     * @param uiFontSize A custom fontsize, or 0.  This will be retrievable via UIManager.get("customFontSize") after this method has returned
+     *          if non 0.  If non zero, all of the standard Swing font keys in UIDefaults will be customized to
+     *          provide a font with the requested size.  Results are undefined for values less than 0 or greater
+     *          than any hard limit the platform imposes on font size.
+     * @param themeURL An optional URL for a theme file, or null. Theme file format documentation can be found
+     *        <a href="https://netbeans.apache.org/projects/ui/themes/themes">here</a>.
      */
     public static void run (Class uiClass, int uiFontSize, URL themeURL) {
         run(uiClass, uiFontSize, themeURL, null);
@@ -526,7 +525,7 @@ public final class Startup {
      *          provide a font with the requested size.  Results are undefined for values less than 0 or greater
      *          than any hard limit the platform imposes on font size.
      * @param themeURL An optional URL for a theme file, or null. Theme file format documentation can be found
-     *        <a href="ui.netbeans.org/project/ui/docs/ui/themes/themes.html">here</a>.
+     *        <a href="https://netbeans.apache.org/projects/ui/themes/themes">here</a>.
      * @param rb resource bundle to use for branding or null. Allows NetBeans to provide enhanced version
      *          of bundle that knows how to deal with branding. The bundle shall have the same keys as
      *          <code>org.netbeans.swing.plaf.Bundle</code> bundle has.
@@ -536,8 +535,8 @@ public final class Startup {
         if (instance == null) {
           // Modify default font size to the font size passed as a command-line parameter
             if(uiFontSize>0) {
-                Integer customFontSize = new Integer (uiFontSize);
-                UIManager.put ("customFontSize", customFontSize);
+                Integer customFontSize = Integer.valueOf(uiFontSize);
+                UIManager.put (LFCustoms.CUSTOM_FONT_SIZE, customFontSize);
             }
             Startup.uiClass = uiClass;
             Startup.themeURL = themeURL;
@@ -574,6 +573,11 @@ public final class Startup {
         String osName = System.getProperty ("os.name");
         return osName.indexOf("Windows 10") >= 0
             || (osName.equals( "Windows NT (unknown)" ) && "10.0".equals( System.getProperty("os.version") ));
+    }
+
+    private static boolean isWindows11() {
+        String osName = System.getProperty ("os.name");
+        return osName.indexOf("Windows 11") >= 0;
     }
 
     private static boolean isMac() {
