@@ -344,7 +344,7 @@ class IndexedPropertyEditor extends Object implements ExPropertyEditor {
 
         if (indexedProperty.getElementType().isPrimitive()) {
             if (getConvertedType().equals(Integer.class)) {
-                value = new Integer(0);
+                value = 0;
             }
 
             if (getConvertedType().equals(Boolean.class)) {
@@ -352,31 +352,31 @@ class IndexedPropertyEditor extends Object implements ExPropertyEditor {
             }
 
             if (getConvertedType().equals(Byte.class)) {
-                value = new Byte((byte) 0);
+                value = (byte)0;
             }
 
             if (getConvertedType().equals(Character.class)) {
-                value = new Character('\u0000');
+                value = '\u0000';
             }
 
             if (getConvertedType().equals(Double.class)) {
-                value = new Double(0d);
+                value = 0D;
             }
 
             if (getConvertedType().equals(Float.class)) {
-                value = new Float(0f);
+                value = 0F;
             }
 
             if (getConvertedType().equals(Long.class)) {
-                value = new Long(0L);
+                value = 0L;
             }
 
             if (getConvertedType().equals(Short.class)) {
-                value = new Short((short) 0);
+                value = (short)0;
             }
         } else {
             try {
-                value = getConvertedType().newInstance();
+                value = getConvertedType().getDeclaredConstructor().newInstance();
             } catch (Exception x) {
                 // ignore any exception - if this fails just
                 // leave null as the value
